c/e, ᎧᎹᎹ is both singular and plural

--- a/ᎧᎹᎹ_(ᏨᏍᎪᏱ).mw
+++ b/ᎧᎹᎹ_(ᏨᏍᎪᏱ).mw
@@ -3,10 +3,10 @@
 | name = ᎧᎹᎹ
 | image = Viceroy Butterfly.jpg
 | image_width = 250px
-| image_caption = A [[Viceroy butterfly|ᏄᎬᏫᏳᏌᏕᎩ]], mimic of the [[Monarch butterfly|ᏄᎬᏫᏳᏌᏕᎩ]]
-| regnum = [[Animal|gantlai]]ia
+| image_caption = A [[Viceroy butterfly|ᏄᎬᏫᏳᏌᏕᎩ ᎧᎹᎹ]], mimic of the [[Monarch butterfly|ᏄᎬᏫᏳᏌᏕᎩ ᎧᎹᎹ]]
+| regnum = [[Animalia]]
 | phylum = [[Arthropod]]a
-| classis = [[Insect|ᏨᏍᎪᏱ]]a
+| classis = [[Insect|ᏨᏍᎪᏱ]]
 | ordo = [[Lepidoptera]]
 | divisio = [[Rhopalocera]]
 | subdivision_ranks = Families
@@ -20,80 +20,76 @@
 ** [[Lycaenidae]]
 ** [[Riodinidae]]
 }}
-'''ᎧᎹᎹ''' ᎨᏒᎢ [[insect|ᏨᏍᎪᏱ]] ᎯᎠ ᎠᏓᏅᏍᏗ [[Lepidoptera]], ᎠᎴ ᎤᏙᏣᎵ ᏌᏊ ᎯᎠ [[superfamily|superfamilies]] [[Hesperioidea]] (ᎯᎠ ᎠᏜ) ᎠᎴ [[Papilionoidea]] (ᏂᎦᏛ ᏐᎢ butterflies).  ᎢᎦᏛ [[authors|ᎪᏪᎵ ᏗᏃᏪᎵᏍᎩ]] ᏯᏓᎢᏗᏏ ᎠᏠᏯᏍᏛ ᎾᏍᎩ ᎾᏍᏇ ᎠᏁᎳ ᎯᎠ superfamily [[Hedyloidea]], ᎯᎠ ᏴᏩᏁᎬ ᎧᎹᎹ ᏩᏐᎳ.  ᎤᏅᏌ ᎠᎴ ᎢᎦᏪᏛ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᎤᏠᏱ [[life cycle|ᎥᎴᏂᏙᎲ ᎠᏓᏠᎯᏍᏗ]]—proceeding ᏂᏛᎴᏅᏓ ᎯᎠ [[larva|ᎠᏲᎵ]]l ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᏥᏄᏍᏗ [[caterpillar|ᏍᎪᏯ ᎠᏁᏍᎩᎸᎥᏍᎩ]]ᏗᎬᏩᎶᏒ [[metamorphosis (biology)|pupic metamorphisis]] ᎾᎾᎯ ᎤᎾᏤᎵ ᎦᏟᏐᏗᎩ ᎤᏔᎾ ᎤᏙᏢᏒ.  ᎯᎠ ᏧᎾᏟᎶᏍᏙᏗ ᎪᏢᎯ ᎢᎪᏢᎯ ᎢgᏁᎸᎯ ᎾᎥᎢ ᎤᎾᏤᎵ ᏧᎸᏌᏓ coloured ᎪᏯᏛ ᎠᎴ ᎤᎾᏤᎵ ᏒᏃᏱ ᎡᎯ ᏅᏙ-ᎩᎳ-ᎠᏓᏙᎵᏍᏗ ᎤᎳᏫᏛᏓ ᎤᎭ ᎪᏢᏅᎯ [[butterfly watching|ᎧᎹᎹ ᎠᎦᎦᏎᏍᏗ]] ᎤᏂᎸᏉᏗ ᎦᎵᏓᏍᏛ.
+'''ᎧᎹᎹ''' ᎨᏒᎢ [[insect|ᏨᏍᎪᏱ]] ᎯᎠ ᎠᏓᏅᏍᏗ [[Lepidoptera]], ᎠᎴ ᎤᏙᏣᎵ ᏌᏊ ᎯᎠ [[superfamily|superfamilies]] [[Hesperioidea]] (ᎯᎠ ᎠᏜ) ᎠᎴ [[Papilionoidea]] (ᏂᎦᏛ ᏐᎢ ᎧᎹᎹ). ᎢᎦᏛ [[authors|ᎪᏪᎵ ᏗᏃᏪᎵᏍᎩ]] ᏯᏓᎢᏗᏏ ᎠᏠᏯᏍᏛ ᎾᏍᎩ ᎾᏍᏇ ᎠᏁᎳ ᎯᎠ superfamily [[Hedyloidea]], ᎯᎠ ᏴᏩᏁᎬ ᎧᎹᎹ ᏩᏐᎳ.  ᎤᏅᏌ ᎠᎴ ᎢᎦᏪᏛ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᎤᏠᏱ [[life cycle|ᎥᎴᏂᏙᎲ ᎠᏓᏠᎯᏍᏗ]]—proceeding ᏂᏛᎴᏅᏓ ᎯᎠ [[larva|ᎠᏲᎵ]]l ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᏥᏄᏍᏗ [[caterpillar|ᏍᎪᏯ ᎠᏁᏍᎩᎸᎥᏍᎩ]] ᏗᎬᏩᎶᏒ [[metamorphosis (biology)|pupic metamorphisis]] ᎾᎾᎯ ᎤᎾᏤᎵ ᎦᏟᏐᏗᎩ ᎤᏔᎾ ᎤᏙᏢᏒ. ᎯᎠ ᏧᎾᏟᎶᏍᏙᏗ ᎪᏢᎯ ᎢᎪᏢᎯ ᎢgᏁᎸᎯ ᎾᎥᎢ ᎤᎾᏤᎵ ᏧᎸᏌᏓ [[colored|ᎠᏑᏫᏒ]] ᎪᏯᏛ ᎠᎴ ᎤᎾᏤᎵ ᏒᏃᏱ ᎡᎯ ᏅᏙ-ᎩᎳ-ᎠᏓᏙᎵᏍᏗ ᎤᎳᏫᏛᏓ ᎤᎭ ᎪᏢᏅᎯ [[butterfly watching|ᎧᎹᎹ ᎠᎦᎦᏎᏍᏗ]] ᎤᏂᎸᏉᏗ ᎦᎵᏓᏍᏛ.
 
-ᏑᏕᏘᏴᏓ ᏳᏓᎵ, ᎿᏊ ᏱᏗᎦᏁᏌᏴᏜᏗᎠ, ᎢᎸᏍᎩ ᎢᏳᏆᏗᏅᏓ
-ᎢᎦᎢ, ᏍᎪᎯᏧᏍᏆ ᎢᏳᏟᎶᏓ ᎠᎾᏂᎩᏍᎪ Ꮲ ᏧᎦᎾᏮ ᎪᎳ ᎢᎪᎯᏓ.
-ᎪᎨᏱ ᎠᏂᎷᎪ, ᎠᏁᎬ Ꮲ ᏓᏂᎲᏍᎪ ᏧᏪᏥ. ᎠᏓᏁᏍᏗᎵ
-ᎠᎾᏣᎢᏍᎪ ᎠᏂᏏᎳᏕᏍᎪ ᎤᎾᏣᎢᏍᏗ ᏧᎾᏔᎾ ᎧᎹᎹᎢ.
+ᏑᏕᏘᏴᏓ ᏳᏓᎵ, ᎿᏊ ᏱᏗᎦᏁᏌᏴᏜᏗᎠ, ᎢᎸᏍᎩ ᎢᏳᏆᏗᏅᏓ ᎢᎦᎢ, ᏍᎪᎯᏧᏍᏆ ᎢᏳᏟᎶᏓ ᎠᎾᏂᎩᏍᎪ Ꮲ ᏧᎦᎾᏮ ᎪᎳ ᎢᎪᎯᏓ. ᎪᎨᏱ ᎠᏂᎷᎪ, ᎠᏁᎬ Ꮲ ᏓᏂᎲᏍᎪ ᏧᏪᏥ. ᎠᏓᏁᏍᏗᎵ ᎠᎾᏣᎢᏍᎪ ᎠᏂᏏᎳᏕᏍᎪ ᎤᎾᏣᎢᏍᏗ ᏧᎾᏔᎾ ᎧᎹᎹᎢ.
 
-<!--The para below shouldn't be in the lead-->
-ᏴᏫ ᎦᎪ ᎠᎦᏎᏍᏙᏗ ᎠᎴ ᎠᏓᏂᏢᏗ butterflies (ᎠᎴ ᎯᎠ ᎾᎥᏂᎨᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ [[moth|ᏩᏐᎳ]]) ᎠᎴ ᎤᏯᏅᎲ ''[[lepidopterist]]'' ᎠᎴ ''aurelians''.
+ᏴᏫ ᎦᎪ ᎠᎦᏎᏍᏙᏗ ᎠᎴ ᎠᏓᏂᏢᏗ ᎧᎹᎹ (ᎠᎴ ᎯᎠ ᎾᎥᏂᎨᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ [[moth|ᏩᏐᎳ]]) ᎠᎴ ᎤᏯᏅᎲ ''[[lepidopterist]]'' ᎠᎴ ''aurelians''.
 
 ==ᎧᏁᏨ==
-ᎯᎠ [[Old English language|ᎠᎦᏴᎵ ᎩᎵᏏ]] ᎧᏁᏨ ᎾᏍᎩᎾᎢ ᎧᎹᎹ ᏥᏄᏍᏛᎩ ''buttorfleoge'' ᎬᎪᏩᏛᏘᏉ ᎢᎬᏂᏏᏍᎩ butterflies ᎨᏒᎩ ᏁᎵᏒ ᎦᏃᏍᎩᏍᏗ ᎤᏅᏗ. ᎤᏠᏱ ᎧᏁᏨ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ [[Dutch language|Dutch]] ᎠᎴ [[German language|ᎠᏓᏥ]] originating ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏠᏱ ᎤᏬᎯᏳᏒ. ᎪᎯ ᎨᏒᎢ ᎤᏬᎯᏳᏅ ᎤᎭ ᎤᏗᏅᏒᎩ ᎯᎠ ᎠᏓᎴᏂᏍᎬ Ꮝ ᎡᏙᎠ ᏚᏙᎥ ᎤᏙᏢᏒ - ᎧᎹᎹ.  
+ᎯᎠ [[Old English language|ᎠᎦᏴᎵ ᎩᎵᏏ]] ᎧᏁᏨ ᎾᏍᎩᎾᎢ ᎧᎹᎹ ᏥᏄᏍᏛᎩ ''buttorfleoge'' ᎬᎪᏩᏛᏘᏉ ᎢᎬᏂᏏᏍᎩ ᎧᎹᎹ ᎨᏒᎩ ᏁᎵᏒ ᎦᏃᏍᎩᏍᏗ ᎤᏅᏗ. ᎤᏠᏱ ᎧᏁᏨ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ [[Dutch language|Dutch]] ᎠᎴ [[German language|ᎠᏓᏥ]] originating ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏠᏱ ᎤᏬᎯᏳᏒ. ᎪᎯ ᎨᏒᎢ ᎤᏬᎯᏳᏅ ᎤᎭ ᎤᏗᏅᏒᎩ ᎯᎠ ᎠᏓᎴᏂᏍᎬ Ꮝ ᎡᏙᎠ ᏚᏙᎥ ᎤᏙᏢᏒ - ᎧᎹᎹ.  
 
-ᏅᎪᏢᎯᏐᏗᏱ [[folk etymology|ᎠᏍᎦᏯᎭ ᎧᏁᏨ]], ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎭᏫᎾᏗᏢ ᎡᏆ Britain, ᎨᏒᎢ Ꮎ ᎾᏍᎩ originated ᏥᏄᏍᏗ ᎠᎦᏲᎳᏗᏍᏗ ᎠᎴᏂᏍᎬ ''ᎪᏢᏅ-coloured tᎥᎦ'' ᏩᏎᎯᎲᎢ ᎯᎠ ᎪᏛᏙᏗ ᎧᎹᎹ ''Gonepteryx rhamni'', ᎢᏳᏓᎵᎭ ᎯᎠ ᎢᎬᏱ ᎧᎹᎹ ᎠᎹ ᎦᏄᎪᎬ. ᎢᎬᏱᎨᏍᏙᏗ, ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎦᎵᏓᏍᏔᏅ ᎠᎦᏎᏍᏔᏅ Ꮎ ᎯᎠ ᎧᏁᏨ ᎧᎹᎹ ᎤᎷᏨᎩ ᏂᏛᎴᏅᏓ [[metathesis|ᎠᏨᏍᏙᏗ]] "flutterby".
+ᏅᎪᏢᎯᏐᏗᏱ [[folk etymology|ᎠᏍᎦᏯᎭ ᎧᏁᏨ]], ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᎭᏫᎾᏗᏢ [[Great Britain|ᎩᎵᏏᏲ]], ᎨᏒᎢ Ꮎ ᎾᏍᎩ originated ᏥᏄᏍᏗ ᎠᎦᏲᎳᏗᏍᏗ ᎠᎴᏂᏍᎬ ''ᎪᏢᏅ-ᎠᏑᏫᏒ tᎥᎦ'' ᏩᏎᎯᎲᎢ ᎯᎠ ᎪᏛᏙᏗ ᎧᎹᎹ ''Gonepteryx rhamni'', ᎢᏳᏓᎵᎭ ᎯᎠ ᎢᎬᏱ ᎧᎹᎹ ᎠᎹ ᎦᏄᎪᎬ. ᎢᎬᏱᎨᏍᏙᏗ, ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎦᎵᏓᏍᏔᏅ ᎠᎦᏎᏍᏔᏅ Ꮎ ᎯᎠ ᎧᏁᏨ ᎧᎹᎹ ᎤᎷᏨᎩ ᏂᏛᎴᏅᏓ [[metathesis|ᎠᏨᏍᏙᏗ]] "flutterby".
 
 ==ᎧᎹᎹ ᏄᏓᎨᏒ==
 [[Image:Microphoto-butterflywing2.jpg|thumb|left|ᎧᎹᎹ ᎪᏯᏛ ᏄᏓᎨᏒ, microphotography]]
-Butterflies ᎠᏓᏣᎸᏗ Lepidoptera ᎠᎴ '''ᏫᏚᏳᎪᏛ-ᎦᏟᏐᏗᎩ''' ᎠᏂᏍᎧᏱ ('''''lepidos''''' = ᏄᏓᎨᏒ ᎠᎴ '''''pteron''''' = ᎪᏯᏛ ᎭᏫᎾᏗᏢ ᎠᎪᎢ). Butterflies ᎤᎭ ᎣᏌᏂ ᏄᏓᎨᏒ ᎾᎿ ᎤᎾᏤᎵ ᎪᏯᏛ Ꮎ ᎭᎦᏔ ᎾᏍᎩᏯᎢ ᎣᏌᏂ ᏓᏪᎳᎩᏍᎩ. ᎾᏍᎩ ᎯᎠ ᏄᏓᎨᏒ ᎠᎴ coloured ᎠᎴ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎠᎾᏓᏁᎲ ᎬᏂᎲᎢ colours ᎠᎴ ᏧᎾᏟᎶᏍᏙᏗ ᎤᎪᏗᏗ butterflies ᎾᎯᏳᎢ ᎠᎾᏓᏁᎳᏍᎬ ᎠᏓᎸᎾᏍᏗ colours ᎠᎴ camouflage ᏧᎾᏟᎶᏍᏙᏗ ᎠᏂᏐᎢ. ᎯᎳᎪ ᎢᏳ ᎤᏒᏂᎸ ᎾᎥᎢ ᎠᏂᏴᏫ, ᎯᎠ ᎪᏯᏛ ᏫᏚᏳᎪᏛ ᎤᏓᏲᎱᏎᏗ ᎢᎦᏛ ᏄᏓᎨᏒ.  ᎯᎠ ᎤᏲᎱᏎᎸ ᏄᏓᎨᏒ ᎭᏫᎾᏗᏢ Ꮭ ᎦᎶᎯᏍᏗ ᎠᏲᏍᏙᏗ ᎯᎠ ᎧᎹᎹ ᎤᏤᎵ ᏅᏏᎾᏒ tᎥᎦ.  ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, ᎢᎦᏛ lepidopterans ᎾᏍᎩᏯᎢ ᎯᎠ [[Sesiidae|Clearwing ᏩᏐᎳ (Sesiidae)]] ᏏᏓᏁᎸᎯ ᎠᎴ ᏅᏙᎲᏅ ᎾᏍᎩ ᎯᎠ ᏄᏓᎨᏒ ᏂᎦᏛ ᎾᎯᏳᎢ ᎠᏂᏐᎢ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ [[Glasswing butterfly|Glasswing ᎧᎹᎹ]] ᎤᎭ ᎾᏍᎩ ᎤᏩᏒ ᎤᏍᏗ ᎢᎦᏛ ᎤᎾᏤᎵ ᎪᏯᏛ ᎦᏚᎢ ᎫᏝᎢ ᎭᏫᎾᏗᏢ ᏄᏓᎨᏒ.  ᎣᏏ ᎢᏳᎾᎵᏍᏓᏁᎯ ᎾᏍᎩᎾᎢ butterflies ᎠᎴ ᎯᎠ evolutionary ᏧᎵᎬᏩᎳᏅᎯ, ᎤᎳᏫᏛᏓ ᎨᏒᎢ ᏰᎵ ᎠᏩᏛᏗ ᎢᏧᎳᎭ ᎬᏙᏗ ᎦᏣᎦᎸᏓ ᎠᎴ tattered ᎪᏯᏛ, ᎤᏣᏘ ᎦᏲᎵᎨ ᎯᎠ ᎤᏲᎱᏎᎸ ᎦᏲᎵ ᎪᏯᏛ ᏄᏓᎨᏒ.  ᎯᎠ ᏄᏓᎨᏒ ᎾᎿ ᎯᎠ ᎧᎹᎹ ᎪᏯᏛ ᎤᎭ ᎤᎪᏗᏗ properties, ᎾᏍᎩ ᎤᎪᏗᏗ ᎠᎪᏩᏛᏗ, Ꮎ ᎤᏁᏉᏨ ᎧᏃᎮᎸᏗ. ᎯᎠ ᏧᎾᏟᎶᏍᏙᏗ ᎤᏅᏌ ᎪᏢᏗ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎠᎪᎲᎢ ᏥᏄᏍᏗ ᎯᎠ ᎣᎯᏍᏗ gantlai iyahdvnelidasdi ᎾᏍᎩᎾᎢ ᎪᎵᏍᏗᏱ ᎯᎠ developmental ᎠᎴ ᎠᏛᎯᏍᏙᏗ processes Ꮎ ᎠᏛᎯᏍᏙᏗ morphological ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎤᏁᎳᏅ ᎤᏬᏢᏅ.
+ᎧᎹᎹ ᎠᏓᏣᎸᏗ Lepidoptera ᎠᎴ '''ᏫᏚᏳᎪᏛ-ᎦᏟᏐᏗᎩ''' ᎠᏂᏍᎧᏱ ('''''lepidos''''' = ᏄᏓᎨᏒ ᎠᎴ '''''pteron''''' = ᎪᏯᏛ ᎭᏫᎾᏗᏢ ᎠᎪᎢ). ᎧᎹᎹ ᎤᎭ ᎣᏌᏂ ᏄᏓᎨᏒ ᎾᎿ ᎤᎾᏤᎵ ᎪᏯᏛ Ꮎ ᎭᎦᏔ ᎾᏍᎩᏯᎢ ᎣᏌᏂ ᏓᏪᎳᎩᏍᎩ. ᎾᏍᎩ ᎯᎠ ᏄᏓᎨᏒ ᎠᎴ ᎠᏑᏫᏒ ᎠᎴ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎠᎾᏓᏁᎲ ᎬᏂᎲᎢ [[colors|ᏗᏑᏫᏍᏗ]] ᎠᎴ ᏧᎾᏟᎶᏍᏙᏗ ᎤᎪᏗᏗ ᎧᎹᎹ ᎾᎯᏳᎢ ᎠᎾᏓᏁᎳᏍᎬ ᎠᏓᎸᎾᏍᏗ [[colors|ᏗᏑᏫᏍᏗ]] ᎠᎴ camouflage ᏧᎾᏟᎶᏍᏙᏗ ᎠᏂᏐᎢ. ᎯᎳᎪ ᎢᏳ ᎤᏒᏂᎸ ᎾᎥᎢ ᎠᏂᏴᏫ, ᎯᎠ ᎪᏯᏛ ᏫᏚᏳᎪᏛ ᎤᏓᏲᎱᏎᏗ ᎢᎦᏛ ᏄᏓᎨᏒ.  ᎯᎠ ᎤᏲᎱᏎᎸ ᏄᏓᎨᏒ ᎭᏫᎾᏗᏢ Ꮭ ᎦᎶᎯᏍᏗ ᎠᏲᏍᏙᏗ ᎯᎠ ᎧᎹᎹ ᎤᏤᎵ ᏅᏏᎾᏒ tᎥᎦ.  ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, ᎢᎦᏛ lepidopterans ᎾᏍᎩᏯᎢ ᎯᎠ [[Sesiidae|Clearwing ᏩᏐᎳ (Sesiidae)]] ᏏᏓᏁᎸᎯ ᎠᎴ ᏅᏙᎲᏅ ᎾᏍᎩ ᎯᎠ ᏄᏓᎨᏒ ᏂᎦᏛ ᎾᎯᏳᎢ ᎠᏂᏐᎢ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ [[Glasswing butterfly|Glasswing ᎧᎹᎹ]] ᎤᎭ ᎾᏍᎩ ᎤᏩᏒ ᎤᏍᏗ ᎢᎦᏛ ᎤᎾᏤᎵ ᎪᏯᏛ ᎦᏚᎢ ᎫᏝᎢ ᎭᏫᎾᏗᏢ ᏄᏓᎨᏒ.  ᎣᏏ ᎢᏳᎾᎵᏍᏓᏁᎯ ᎾᏍᎩᎾᎢ ᎧᎹᎹ ᎠᎴ ᎯᎠ evolutionary ᏧᎵᎬᏩᎳᏅᎯ, ᎤᎳᏫᏛᏓ ᎨᏒᎢ ᏰᎵ ᎠᏩᏛᏗ ᎢᏧᎳᎭ ᎬᏙᏗ ᎦᏣᎦᎸᏓ ᎠᎴ tattered ᎪᏯᏛ, ᎤᏣᏘ ᎦᏲᎵᎨ ᎯᎠ ᎤᏲᎱᏎᎸ ᎦᏲᎵ ᎪᏯᏛ ᏄᏓᎨᏒ.  ᎯᎠ ᏄᏓᎨᏒ ᎾᎿ ᎯᎠ ᎧᎹᎹ ᎪᏯᏛ ᎤᎭ ᎤᎪᏗᏗ properties, ᎾᏍᎩ ᎤᎪᏗᏗ ᎠᎪᏩᏛᏗ, Ꮎ ᎤᏁᏉᏨ ᎧᏃᎮᎸᏗ. ᎯᎠ ᏧᎾᏟᎶᏍᏙᏗ ᎤᏅᏌ ᎪᏢᏗ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎠᎪᎲᎢ ᏥᏄᏍᏗ ᎯᎠ ᎣᎯᏍᏗ ᎦᏂᏝᎢ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎾᏍᎩᎾᎢ ᎪᎵᏍᏗᏱ ᎯᎠ developmental ᎠᎴ ᎠᏛᎯᏍᏙᏗ processes Ꮎ ᎠᏛᎯᏍᏙᏗ morphological ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎤᏁᎳᏅ ᎤᏬᏢᏅ.
 
-Butterflies ᎤᎭ ᏭᏪᏙᎢ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᏗᏟᎶᏍᏙᏗ ᎠᏓᏁᎳᏅᎯ ᎾᏍᎩᎾᎢ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏕᎦᎶᎨᏒ ᎠᎦᏎᏍᏙᏗ, spanning ᎤᎾᏙᏢᎯ, evolutionary ᎤᎾᏙᏢᎯ ᎠᎴ ᎠᏂᏙᎾᎥ ᎤᎾᏙᏢᎯ (Boggs ''ᎠᏃᏪᎵᏍᎬ ᎦᎾᏄᎪᏫᏒ.'', 2003). ᎤᏣᏘ ᎯᎠ ᎪᎷᏩᏛᏗ ᎾᎿ aposematism ᎠᎴ mimicry ᏚᎴᏅ ᏂᏛᎴᏅᏓ nineteenth ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ ᏗᎦᏎᏍᏙᏗ ᎾᎥᎢ lepidopterists ᏚᎾᎦᏎᏍᏛ butterflies ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏤ ᎡᎶᎯ ᎠᎴ ᎯᎠ ᎠᏍᏆᎨᏂ. ᎤᎪᏗ ᏅᎠᏯᏍᏗ ᎾᎥᎢ H. F. Nijhout ᎠᎴ ᎠᏂᏐᎢ ᎤᎭ ᏭᏪᏙᎢ ᎠᏍᏆᏛᎯ ᎾᎿ developmental ᎤᎾᏙᏢᎯ ᎦᏙ ᎤᏍᏗ ᎤᎭ ᎠᏓᏁᎳᏅ ᎥᎦᏔᎲᎢ ᎾᎾᎯ ᎯᎠ ᏚᏙᎳᏩᏛᎲ ᏗᎧᏃᏗ ᏧᎾᏟᎶᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎧᎹᎹ ᎪᏯᏛ.
+ᎧᎹᎹ ᎤᎭ ᏭᏪᏙᎢ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᏗᏟᎶᏍᏙᏗ ᎠᏓᏁᎳᏅᎯ ᎾᏍᎩᎾᎢ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏕᎦᎶᎨᏒ ᎠᎦᏎᏍᏙᏗ, spanning ᎤᎾᏙᏢᎯ, evolutionary ᎤᎾᏙᏢᎯ ᎠᎴ ᎠᏂᏙᎾᎥ ᎤᎾᏙᏢᎯ (Boggs ''ᎠᏃᏪᎵᏍᎬ ᎦᎾᏄᎪᏫᏒ.'', 2003). ᎤᏣᏘ ᎯᎠ ᎪᎷᏩᏛᏗ ᎾᎿ aposematism ᎠᎴ mimicry ᏚᎴᏅ ᏂᏛᎴᏅᏓ nineteenth ᏍqᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ ᏗᎦᏎᏍᏙᏗ ᎾᎥᎢ lepidopterists ᏚᎾᎦᏎᏍᏛ ᎧᎹᎹ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏤ ᎡᎶᎯ ᎠᎴ ᎯᎠ ᎠᏍᏆᎨᏂ. ᎤᎪᏗ ᏅᎠᏯᏍᏗ ᎾᎥᎢ H. F. Nijhout ᎠᎴ ᎠᏂᏐᎢ ᎤᎭ ᏭᏪᏙᎢ ᎠᏍᏆᏛᎯ ᎾᎿ developmental ᎤᎾᏙᏢᎯ ᎦᏙ ᎤᏍᏗ ᎤᎭ ᎠᏓᏁᎳᏅ ᎥᎦᏔᎲᎢ ᎾᎾᎯ ᎯᎠ ᏚᏙᎳᏩᏛᎲ ᏗᎧᏃᏗ ᏧᎾᏟᎶᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎧᎹᎹ ᎪᏯᏛ.
 
 ==ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ==
 <gallery>
 Image:Blue morpho butterfly.jpg|[[Blue Morpho|ᏌᎪᏂᎨ Morpho]], ᏏᏓᏁᎸᎯ Nymphalidae
 Image:Meadow Argus02.jpg|[[Meadow Argus|ᏂᎬᏅ ᎠᎪᏩᏛᏗ]],  ᏧᏣᏔᏊ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ  Australia
 Image:Geitoneura klugii2.jpg|''[[Geitoneura klugii]]''
-Image:Bolboretas Galicia.gif|Butterflies
+Image:Bolboretas Galicia.gif|ᎧᎹᎹ
 </gallery>
 
-ᎾᎯᏳᏊ butterflies ᎠᎴ classified ᎭᏫᎾᏗᏢ ᏔᎵ superfamilies, [[Hesperioidea]], ᎤᏠᏯᏍᏛ ᎯᎠ 'ᎠᏜ' ᎠᎴ [[Papilionoidea]] ᎠᎴ 'ᎤᏙᎯᏳ butterflies'. ᎾᏍᎩ ᎯᎠ ᎠᎴ [[sister taxon|ᎤᎸ taxa]], ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ butterflies ᏂᎦᏛ ᎠᎴ ᏁᎵᏒ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎤᏙᎯᏳ [[clade]].  ᎢᎦᏛ ᎪᎯᏊ ᎢᏴ ᏥᎩ taxonomists ᎾᎿᎢ ᎠᏂ ᏂᎦᏛ ᎭᏫᎾᏗᏢ superfamily Papilionoidea, ᏧᏓᎴᎿᎢ ᎯᎠ ᎠᏜ ᏂᏛᎴᏅᏓ ᎯᎠ ᏐᎢ butterflies ᎾᎾᎢ ᎯᎠ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ ᎤᏩᎾᏕᏍᎩ ᎾᏍᎩ ᎤᏩᏒ. ᎭᏫᎾᏗᏢ ᎪᎯ ᎢᏯhᏛᏁᎵᏓᏍᏗ,  Papilionoidea ᎤᎾᏠᏯᏍᏗ  ᎯᎠ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ Hesperiiformes (ᎬᏙᏗ ᏌᏊ ᏏᏓᏁᎸᎯ ᎾᏍᎩ ᎤᏩᏒ, ᎯᎠ ᎠᏜ ᏏᏓᏁᎸᎯ [[Hesperiidae]]) ᎠᎴ ᎯᎠ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ Papilioniformes (ᎬᏙᏗ ᎯᏍᎩ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ).
+ᎾᎯᏳᏊ ᎧᎹᎹ ᎠᎴ classified ᎭᏫᎾᏗᏢ ᏔᎵ superfamilies, [[Hesperioidea]], ᎤᏠᏯᏍᏛ ᎯᎠ 'ᎠᏜ' ᎠᎴ [[Papilionoidea]] ᎠᎴ 'ᎤᏙᎯᏳ ᎧᎹᎹ'. ᎾᏍᎩ ᎯᎠ ᎠᎴ [[sister taxon|ᎤᎸ taxa]], ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎧᎹᎹ ᏂᎦᏛ ᎠᎴ ᏁᎵᏒ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎤᏙᎯᏳ [[clade]].  ᎢᎦᏛ ᎪᎯᏊ ᎢᏴ ᏥᎩ taxonomists ᎾᎿᎢ ᎠᏂ ᏂᎦᏛ ᎭᏫᎾᏗᏢ superfamily Papilionoidea, ᏧᏓᎴᎿᎢ ᎯᎠ ᎠᏜ ᏂᏛᎴᏅᏓ ᎯᎠ ᏐᎢ ᎧᎹᎹ ᎾᎾᎢ ᎯᎠ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ ᎤᏩᎾᏕᏍᎩ ᎾᏍᎩ ᎤᏩᏒ. ᎭᏫᎾᏗᏢ ᎪᎯ ᎢᏯhᏛᏁᎵᏓᏍᏗ,  Papilionoidea ᎤᎾᏠᏯᏍᏗ  ᎯᎠ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ Hesperiiformes (ᎬᏙᏗ ᏌᏊ ᏏᏓᏁᎸᎯ ᎾᏍᎩ ᎤᏩᏒ, ᎯᎠ ᎠᏜ ᏏᏓᏁᎸᎯ [[Hesperiidae]]) ᎠᎴ ᎯᎠ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ Papilioniformes (ᎬᏙᏗ ᎯᏍᎩ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ).
 ===ᎧᎹᎹ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ===
-ᎯᎠ ᎯᏍᎩ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᎤᏙᎯᏳ butterflies ᎤᏠᏱᎭ recognised ᎭᏫᎾᏗᏢ ᎯᎠ [[Papilionoidea]] ᎠᎴ:-
-*ᏏᏓᏁᎸᎯ ''[[Papilionidae]]'', ᎯᎠ [[Swallowtail]]ᎠᎴ [[Birdwing]]. 
+ᎯᎠ ᎯᏍᎩ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᎤᏙᎯᏳ ᎧᎹᎹ ᎤᏠᏱᎭ recognized ᎭᏫᎾᏗᏢ ᎯᎠ [[Papilionoidea]] ᎠᎴ:-
+*ᏏᏓᏁᎸᎯ ''[[Papilionidae]]'', ᎯᎠ [[Swallowtail]] ᎠᎴ [[Birdwing]]. 
 *ᏏᏓᏁᎸᎯ ''[[Pieridae]]'', ᎯᎠ ᎤᏁᎬ ᎠᎴ ᎦᎳᏩᏎᏗ.
-*ᏏᏓᏁᎸᎯ ''[[Lycaenidae]]'', ᎯᎠ ᎧᏂᎬᎾᎥ ᎠᎴ ᎠᏥᏱ, ᎾᏍᎩ ᎾᏍᏇ ᎤᏯᏅᎲ ᎯᎠ ᎠᏍᏓᏅᏅ-ᎦᏟᏐᏗᎩ Butterflies, 
-*ᏏᏓᏁᎸᎯ ''[[Riodinidae]]'', ᎯᎠ [[Metalmark butterfly|Metalmark butterflies]], 
-*ᏏᏓᏁᎸᎯ ''[[Nymphalidae]]'', ᎯᎠ [[Brush-footed butterfly|ᎦᏄᎪᏅᏙᏗ-ᎦᏣᏄᎳ butterflies]], 
+*ᏏᏓᏁᎸᎯ ''[[Lycaenidae]]'', ᎯᎠ ᎧᏂᎬᎾᎥ ᎠᎴ ᎠᏥᏱ, ᎾᏍᎩ ᎾᏍᏇ ᎤᏯᏅᎲ ᎯᎠ ᎠᏍᏓᏅᏅ-ᎦᏟᏐᏗᎩ ᎧᎹᎹ, 
+*ᏏᏓᏁᎸᎯ ''[[Riodinidae]]'', ᎯᎠ [[Metalmark butterfly|Metalmark ᎧᎹᎹ]], 
+*ᏏᏓᏁᎸᎯ ''[[Nymphalidae]]'', ᎯᎠ [[Brush-footed butterfly|ᎦᏄᎪᏅᏙᏗ-ᎦᏣᏄᎳ ᎧᎹᎹ]], 
 
 ===ᎢᎦᏛ ᏧᏣᏔᏊ/ᎠᏔᎴᏒ ᎠᎹᏱ ᎤᎾᏅᏛ ᎧᎹᎹ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ===
-ᎾᎿᎢ ᎠᎴ ᎠᏰᎵ 15,000 ᎠᎴ 20,000 [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] butterflies ᏗᏍᏆᎸᏙᏗ. ᎢᎦᏛ ᎠᏔᎴᏒ ᎠᎹᏱ ᎤᎾᏅᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏂᏛᎴᏅᏓ yvwatuwidv ᎯᎠ ᎡᎶᎯ ᎠᏠᏯᏍᏛ:-
-*[[Swallowtail]]ᎠᎴ [[Birdwing]], ᏏᏓᏁᎸᎯ '''Papilionidae'''
+ᎾᎿᎢ ᎠᎴ ᎠᏰᎵ 15,000 ᎠᎴ 20,000 [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎧᎹᎹ ᏗᏍᏆᎸᏙᏗ. ᎢᎦᏛ ᎠᏔᎴᏒ ᎠᎹᏱ ᎤᎾᏅᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏂᏛᎴᏅᏓ yvwatuwidv ᎯᎠ ᎡᎶᎯ ᎠᏠᏯᏍᏛ:-
+*[[Swallowtail]] ᎠᎴ [[Birdwing]], ᏏᏓᏁᎸᎯ '''Papilionidae'''
 **[[Swallowtail|ᏧᏣᏔᏊ ᏓᎶᏂᎨ Swallowtail]], ''Papilio machaon''
 **[[Spicebush Swallowtail]], ''Papilio troilus''
 **[[Papilio demoleus|ᎪᏍᏚᎤᏁᎬ ᎧᎹᎹ]], ''Papilio demoleus''
-**[[Birdwing|''Ornithoptera'']] ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ (Birdwings; ᎯᎠ ᎤᏔᏂᎢᏍᏗ butterflies)
-*[[Pieridae|ᎤᏁᎬ]]ᎠᎴ ᎦᎳᏩᏎᏗ, ᏏᏓᏁᎸᎯ '''Pieridae'''
+**[[Birdwing|''Ornithoptera'']] ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ (Birdwings; ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎧᎹᎹ)
+*[[Pieridae|ᎤᏁᎬ]] ᎠᎴ ᎦᎳᏩᏎᏗ, ᏏᏓᏁᎸᎯ '''Pieridae'''
 **[[Small White|ᎤᏍᏗ ᎤᏁᎬ]], ''Pieris rapae''
 **[[Green-veined White|ᎢᏤ ᎢᏳᏍᏗ-ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎤᏁᎬ]], ''Pieris napi''
 **[[Delias eucharis|ᏧᏣᏔᏊ ᏄᏁᎸᎾ]], ''Delias eucharis''
-*[[Lycaenidae|ᎧᏂᎬᎾᎥ ᎠᎴ ᎠᏥᏱ]] ᎠᎴ ᎠᏍᏓᏅᏅ-ᎦᏟᏐᏗᎩ Butterflies, ᏏᏓᏁᎸᎯ '''Lycaenidae'''
+*[[Lycaenidae|ᎧᏂᎬᎾᎥ ᎠᎴ ᎠᏥᏱ]] ᎠᎴ ᎠᏍᏓᏅᏅ-ᎦᏟᏐᏗᎩ ᎧᎹᎹ, ᏏᏓᏁᎸᎯ '''Lycaenidae'''
 **[[Xerces Blue|Xerces ᏌᎪᏂᎨ]], ''Glaucopsyche xerces''
 **[[Karner Blue|Karner ᏌᎪᏂᎨ]], ''Lycaeides melissa samuelis'' (ᎦᏂᏰᎩ)
 **[[Talicada nyseus|ᎩᎦᎨ Pierrot]], ''Talicada nyseus''
-*[[Metalmark butterfly|Metalmark butterflies]], ᏏᏓᏁᎸᎯ '''Riodinidae'''
+*[[Metalmark butterfly|Metalmark ᎧᎹᎹ]], ᏏᏓᏁᎸᎯ '''Riodinidae'''
 **Lange ᎤᏤᎵ [[Riodinidae|Metalmark ᎧᎹᎹ]]
 **[[Abisara echerius|ᏆᏄᎾᏍᏗ Judy]], ''Abisara echerius''
-*[[Brush-footed butterfly|ᎦᏄᎪᏅᏙᏗ-ᎦᏣᏄᎳ butterflies]], ᏏᏓᏁᎸᎯ '''Nymphalidae'''
+*[[Brush-footed butterfly|ᎦᏄᎪᏅᏙᏗ-ᎦᏣᏄᎳ ᎧᎹᎹ]], ᏏᏓᏁᎸᎯ '''Nymphalidae'''
 **[[Painted Lady|ᎦᎶᏁᏛ ᎠᎨᏴ]], ᎠᎴ ᎠᏍᎦᏯᎭ, ''Vanessa cardui''
 **[[Monarch butterfly|ᏄᎬᏫᏳᏌᏕᎩ ᎧᎹᎹ]], ''Danaus plexippus''
 **[[Morpho (butterfly)|''Morpho'']] ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 **[[Speckled Wood|ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎠᏓ]], ''Pararge aegeria''
 
-===ᏧᏓᎴᎿᎢ ᎠᏰᎵ '''butterflies''' ᎠᎴ '''ᏩᏐᎳ'''===
-Butterflies ᎠᎴ ᏩᏐᎳ ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᏦᎠᏎᏔᏅ ᎬᏙᏗ ᎠᏂᏏᏴᏫᎭ ᏐᎢ. ᎾᏍᎩ ᎤᏁᎳᎩ ᎾᎿᎢ ᎠᎴ ᎤᎪᏗᏗ ᏫᎦᎶᎯᏍᏗ [[difference between a butterfly and a moth|ᏧᏓᎴᎿᎢ  ᎧᎹᎹ ᏂᏛᎴᏅᏓ  ᏩᏐᎳ]], ᎾᎿᎢ ᎠᎴ ᏗᎦᏘᎸᏓ ᏂᎦᎥᎢ ᎠᏍᏓᏩᏛᏍᏙᏗ, ᎠᎴ ᎾᏍᎩ ᎨᏒᎢ ᎠᏎᏱᎩ ᎤᏟ ᎢᏲᏍᏛ ᎠᏓᏅᏖᏍᎬ butterflies ᏥᏄᏍᏗ ᎤᎾᏓᏟᏌᎲ ᎢᎦ ᎦᏃᎯᎸᏒ ᏩᏐᎳ.
+===ᏧᏓᎴᎿᎢ ᎠᏰᎵ '''ᎧᎹᎹ''' ᎠᎴ '''ᏩᏐᎳ'''===
+ᎧᎹᎹ ᎠᎴ ᏩᏐᎳ ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᏦᎠᏎᏔᏅ ᎬᏙᏗ ᎠᏂᏏᏴᏫᎭ ᏐᎢ. ᎾᏍᎩ ᎤᏁᎳᎩ ᎾᎿᎢ ᎠᎴ ᎤᎪᏗᏗ ᏫᎦᎶᎯᏍᏗ [[difference between a butterfly and a moth|ᏧᏓᎴᎿᎢ  ᎧᎹᎹ ᏂᏛᎴᏅᏓ  ᏩᏐᎳ]], ᎾᎿᎢ ᎠᎴ ᏗᎦᏘᎸᏓ ᏂᎦᎥᎢ ᎠᏍᏓᏩᏛᏍᏙᏗ, ᎠᎴ ᎾᏍᎩ ᎨᏒᎢ ᎠᏎᏱᎩ ᎤᏟ ᎢᏲᏍᏛ ᎠᏓᏅᏖᏍᎬ ᎧᎹᎹ ᏥᏄᏍᏗ ᎤᎾᏓᏟᏌᎲ ᎢᎦ ᎦᏃᎯᎸᏒ ᏩᏐᎳ.
 
 ===Taxonomic ᎠᏯᏙᎯᎲ===
-ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎢᏤ ᎠᎦᏎᏍᏙᏗ (Wahlberg ᎠᏃᏪᎵᏍᎬ ᎦᎾᏄᎪᏫᏒ., 2005) combining morphological ᎠᎴ ᎠᏍᏓᏩᏛᏍᏗ ᎾᎯᏳ ᎢᎪᎯ ᎠᏍᏆᏛ Ꮎ Hesperiidae, Papilionidae, Pieridae, Lycaenidae ᎠᎴ Riodinidae ᏰᎵᏇ ᏂᎦᏛ ᎾᏍᏋ ᎤᎳᏂᎩᏗᏳ ᎤᎵᏍᏕᎸᎲ ᏥᏄᏍᏗ [[monophyletic]] clades, ᎠᎴ ᎯᎠ ᏄᏍᏗᏓᏅ [[Nymphalidae]] ᎨᏒᎢ ᎤᏝᏏᏛ.  Lycaenidae ᎠᎴ Riodinidae ᎨᏒᎩ ᎦᎫᏍᏛᏅᎯ ᏥᏄᏍᏗ ᎤᎸ taxa, ᎠᎴ Papilionidae ᏥᏄᏍᏗ ᎯᎠ outgroup ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎯᎠ ᎤᏙᎯᏳ butterflies, ᎠᎴ ᎯᎠ ᎦᎷᎯᏍᏗ Pieridae ᎭᏫᏂᏗᏢ ᎯᎠ ᏗᏟᎶᏍᏙᏗ ᎠᎦᏲᎳᏗᏍᏗ ᏥᏄᏍᏛᎩ unclear, ᎬᏙᏗ ᏄᏓᎴᎿᎥ ᎤᎵᏍᏕᎸᏗ ᎪᎯᏳᏙ ᎠᏂᏁᎢᏍᏗᏍᎬ ᏄᏓᎴᎿᎥ ᎠᏍᏆᏗᏍᏗ.  ᎯᎠ ᎾᎯᏳ ᎢᎪᎯ ᎧᏁᎢᏍᏔᏅ Ꮎ ᎯᎠ ᏩᏐᎳ Hedyloidea ᎠᎴ ᎤᏙᎯᏳᎢ ᎤᏟ ᎢᎦᎢ ᎾᎥᏂᎨᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎯᎠ butterflies ᎬᎾᏬᏍᎬ ᏐᎢ ᏩᏐᎳ.
+ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎢᏤ ᎠᎦᏎᏍᏙᏗ (Wahlberg ᎠᏃᏪᎵᏍᎬ ᎦᎾᏄᎪᏫᏒ., 2005) combining morphological ᎠᎴ ᎠᏍᏓᏩᏛᏍᏗ ᎾᎯᏳ ᎢᎪᎯ ᎠᏍᏆᏛ Ꮎ Hesperiidae, Papilionidae, Pieridae, Lycaenidae ᎠᎴ Riodinidae ᏰᎵᏇ ᏂᎦᏛ ᎾᏍᏋ ᎤᎳᏂᎩᏗᏳ ᎤᎵᏍᏕᎸᎲ ᏥᏄᏍᏗ [[monophyletic]] clades, ᎠᎴ ᎯᎠ ᏄᏍᏗᏓᏅ [[Nymphalidae]] ᎨᏒᎢ ᎤᏝᏏᏛ.  Lycaenidae ᎠᎴ Riodinidae ᎨᏒᎩ ᎦᎫᏍᏛᏅᎯ ᏥᏄᏍᏗ ᎤᎸ taxa, ᎠᎴ Papilionidae ᏥᏄᏍᏗ ᎯᎠ outgroup ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎯᎠ ᎤᏙᎯᏳ ᎧᎹᎹ, ᎠᎴ ᎯᎠ ᎦᎷᎯᏍᏗ Pieridae ᎭᏫᏂᏗᏢ ᎯᎠ ᏗᏟᎶᏍᏙᏗ ᎠᎦᏲᎳᏗᏍᏗ ᏥᏄᏍᏛᎩ unclear, ᎬᏙᏗ ᏄᏓᎴᎿᎥ ᎤᎵᏍᏕᎸᏗ ᎪᎯᏳᏙ ᎠᏂᏁᎢᏍᏗᏍᎬ ᏄᏓᎴᎿᎥ ᎠᏍᏆᏗᏍᏗ.  ᎯᎠ ᎾᎯᏳ ᎢᎪᎯ ᎧᏁᎢᏍᏔᏅ Ꮎ ᎯᎠ ᏩᏐᎳ Hedyloidea ᎠᎴ ᎤᏙᎯᏳᎢ ᎤᏟ ᎢᎦᎢ ᎾᎥᏂᎨᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎯᎠ ᎧᎹᎹ ᎬᎾᏬᏍᎬ ᏐᎢ ᏩᏐᎳ.
 
 ᎢᎦᏛ ᎠᎦᏴᎳᎯᎨᏍᏙᏗ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ ᎠᏓᏙᎵᏍᏗ ᏗᎦᏟᏌᏅᎯ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ Danaidae, Heliconiidae, [[Snout butterfly|Libytheidae]] ᎠᎴ Satyridae, ᎠᎴ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ ᎠᏓᏁᏗ ᎾᏍᎩ ᎯᎠ ᏥᏄᏍᏗ subfamilies ᎭᏫᏂᏗᏢ ᎯᎠ Nymphalidae.
 
 ==ᎯᎠ ᏅᎩ ᎠᏓᏅᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ lifecycle ᎧᎹᎹ== 
-[[Image:Mating Butterflies at the End of a Leaf.jpg|thumb|right|ᎠᏯᏖᏃ ᎦᏅᏗ Butterflies]]
-[[Image:Mating_butterflies.jpg|thumb|right|ᎤᏟ ᎢᎦᎢ ᎠᏯᏖᏃ ᎦᏅᏗ butterflies, ᎯᎠ ᎦᏚᎢ ᎧᎹᎹ ᎨᏒᎢ ᎯᎠ ᎠᎨᏴ ᏥᏄᏍᏗ ᎾᏍᎩ ᎠᎨᏴ ᎨᏒᎢ ᎯᎠ ᎡᏆᎯᎨᏍᏙᏗ]]
-ᏧᏓᎴᎿᎢ ᎤᎪᏗᏗ ᎠᏂᏍᎧᏱ, butterflies ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎦᏙᎲᏒ [[nymph (biology)|ᎠᏲᎵ]] ᎠᎴᏫᏍᏙᏗ, ᎠᎴ ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎠᎾᎩᏍᏗ ᏗᎬᏩᎶᏒ pupal ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᎦᏙ ᎤᏍᏗ ᏓᏂᎾᎬ ᎠᏰᎵ ᎯᎠ ᎠᏲᎵ ᎠᎴ ᎯᎠ ᎤᏔᎾ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ (ᎯᎠ ''[[imago]]'').
+[[Image:Mating Butterflies at the End of a Leaf.jpg|thumb|right|ᎠᏯᏖᏃ ᎦᏅᏗ ᎧᎹᎹ]]
+[[Image:Mating_butterflies.jpg|thumb|right|ᎤᏟ ᎢᎦᎢ ᎠᏯᏖᏃ ᎦᏅᏗ ᎧᎹᎹ, ᎯᎠ ᎦᏚᎢ ᎧᎹᎹ ᎨᏒᎢ ᎯᎠ ᎠᎨᏴ ᏥᏄᏍᏗ ᎾᏍᎩ ᎠᎨᏴ ᎨᏒᎢ ᎯᎠ ᎡᏆᎯᎨᏍᏙᏗ]]
+ᏧᏓᎴᎿᎢ ᎤᎪᏗᏗ ᎠᏂᏍᎧᏱ, ᎧᎹᎹ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᎦᏙᎲᏒ [[nymph (biology)|ᎠᏲᎵ]] ᎠᎴᏫᏍᏙᏗ, ᎠᎴ ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎠᎾᎩᏍᏗ ᏗᎬᏩᎶᏒ pupal ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᎦᏙ ᎤᏍᏗ ᏓᏂᎾᎬ ᎠᏰᎵ ᎯᎠ ᎠᏲᎵ ᎠᎴ ᎯᎠ ᎤᏔᎾ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ (ᎯᎠ ''[[imago]]'').
 * [[Egg (biology)|ᎤᏪᏥ]]
 * [[Larva|ᎠᏲᎵ]], ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[caterpillar|ᏍᎪᏯ ᎠᏁᏍᎩᎸᎥᏍᎩ]]
 * [[Pupa|ᎠᏲᎵ]] (''[[chrysalis|ᎠᏲᎵ]]'')
@@ -110,21 +106,18 @@ Larvae, ᎠᎴ [[caterpillar|ᏍᎪᏯ ᎠᏁᏍᎩᎸᎥᏍᎩ]], ᎠᎴ multi-
 ᏍᎪᏯ ᎠᏁᏍᎩᎸᎥᏍᎩ ᎤᏩᎾᏒ ᎤᏛᏒ ᏗᎬᏩᎶᏒ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ ᎠᏓᏅᏍᏗ, ᎤᏯᏅᎲ instars.  ᎾᎥᏂᎨ ᎯᎠ ᎤᎵᏍᏛ ᎠᏂᏏᏴᏫᎭ instar, ᎯᎠ ᎠᏲᎵ undergoes ᏧᎵᎬᏩᎳᏅᎯ ᎤᏯᏅᎲ [[apolysis]], ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎯᎠ [[cuticle|ᎠᏰᎵ]], ᏧᏠᎯᏍᏗ [[chitin]] ᎠᎴ specialized [[proteins|ᏤᎵ]], ᎨᏒᎢ ᏓᏥᏲᏒᎩ ᏂᏛᎴᏅᏓ ᎯᎠ [[epidermis|ᎠᏰᎵ]] ᎠᎴ ᎯᎠ [[epidermis|ᎠᏰᎵ]] ᎠᎴᏂᏍᎬ ᎤᏙᏢᏒ ᎢᏤ [[cuticle|ᎠᏰᎵ]] ᎭᏫᎾᏗᏢ.  ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ ᎠᏂᏏᏴᏫᎭ instar, ᎯᎠ ᎠᏲᎵ [[ecdysis|moults]] ᎯᎠ ᎠᎦᏴᎵ [[cuticle|ᎠᏰᎵ]], ᎠᎴ ᎯᎠ ᎢᏤ [[cuticle|ᎠᏰᎵ]] ᎤᎵᏍᏓᎯᎨ ᏄᎵᏂᎬᎬ ᎠᎴ ᏗᎧᏃᏗ.  ᏚᏙᎳᏩᏛᎲ ᎧᎹᎹ ᎪᏯᏛ ᏧᎾᏟᎶᏍᏙᏗ ᎠᎴᏂᏍᎬ ᎾᎥᎢ ᎯᎠ ᎣᏂ larval instar.  
 
 ===ᎪᏯᏛ ᏚᏙᎳᏩᏛᎲ ᎭᏫᎾᏗᏢ larval ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ===
-[[File:Fifthinstarwingdisk.png|thumb|100px|left|ᎣᏂ instar ᎪᏯᏛ ᏙᏯᏗᏢ, ''Junonia coenia'']] 
-
-Butterflies ᎠᏓᏣᎸᏗ ᎯᎠ specialized ᎠᎴ ᎠᏛᎯᏍᏙᏗ ᏚᎾᏓᏚᏓᎸ [[holometabolism|holometabolous]] ᎠᏂᏍᎧᏱ, ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ Ꮎ ᎪᏯᏛ ᎠᎴ ᎪᏯᏛ ᏗᏯᎦᎸᏗ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎬᎪᏩᏛᏗ ᎾᎿ ᎯᎠ ᏙᏯᏗᏢ ᎯᎠ ᎠᏲᎵ, ᎠᎴ ᎯᎳᎪ ᎢᏳ larvae ᎠᎴ dissected, ᎤᏍᏗ ᎠᏙᎷᏩᏘᏍᎬ "ᎪᏯᏛ ᏙᏯᏗᏢ" ᏰᎵᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎾᎿ ᎯᎠ ᏔᎵᏁ ᎠᎴ ᏦᎢᏁ thoracic ᎢᎦᏛ, ᎭᏫᎾᏗᏢ ᎾᎿᎢ ᎯᎠ ᎠᎲᏣᏬᎳᏛ Ꮎ ᎠᎴ ᎬᎪᏩᏛᏗ ᎾᎿ ᎭᏫᎾᏗᏢ ᎢᎦᏛ.  
+ᎧᎹᎹ ᎠᏓᏣᎸᏗ ᎯᎠ specialized ᎠᎴ ᎠᏛᎯᏍᏙᏗ ᏚᎾᏓᏚᏓᎸ [[holometabolism|holometabolous]] ᎠᏂᏍᎧᏱ, ᎦᏙ ᎤᏍᏗ ᎤᏅᏔᏂᏓᏍᏗ Ꮎ ᎪᏯᏛ ᎠᎴ ᎪᏯᏛ ᏗᏯᎦᎸᏗ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎬᎪᏩᏛᏗ ᎾᎿ ᎯᎠ ᏙᏯᏗᏢ ᎯᎠ ᎠᏲᎵ, ᎠᎴ ᎯᎳᎪ ᎢᏳ larvae ᎠᎴ dissected, ᎤᏍᏗ ᎠᏙᎷᏩᏘᏍᎬ "ᎪᏯᏛ ᏙᏯᏗᏢ" ᏰᎵᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎾᎿ ᎯᎠ ᏔᎵᏁ ᎠᎴ ᏦᎢᏁ thoracic ᎢᎦᏛ, ᎭᏫᎾᏗᏢ ᎾᎿᎢ ᎯᎠ ᎠᎲᏣᏬᎳᏛ Ꮎ ᎠᎴ ᎬᎪᏩᏛᏗ ᎾᎿ ᎭᏫᎾᏗᏢ ᎢᎦᏛ.  
 
 ᎪᏯᏛ ᏙᏯᏗᏢ ᎤᏙᎷᏬᏗ ᎭᏫᎾᏗᏢ ᎤᎾᎵᎪᏒ ᎬᏙᏗ ᎠᎲᏣᏬᎳᏛ Ꮎ ᏓᏍᏆᎶᏗ ᎨᎳᏛᏍᏗ ᎯᎠ ᎠᎴᏅᏗdᏒ ᎯᎠ ᎪᏯᏛ, ᎠᎴ ᎠᎴ ᏓᎦtᎤᏫᏍᏔᏅ ᎾᎥᎢ ᏌᎨᎢ "peripodial ᏫᏚᏳᎪᏛ", ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎤᎾᏓᏟᏌᎲ ᎯᎠ outer ᎠᏰᎵ ᎯᎠ ᎠᏲᎵ ᎾᎥᎢ ᎤᏍᏗ ᎤᎶᎯᏍᏗ.  
 
 ᎪᏯᏛ ᏙᏯᏗᏢ ᎠᎴ ᎤᏙᎯᏳ ᎤᏍᏗ ᎢᏳᏩᎪᏗ ᎯᎠ ᎣᏂ larval instar, ᎯᎳᎪ ᎢᏳ ᎤᏅᏌ ᎧᏁᏉᎩ dramatically ᎭᏫᎾᏗᏢ ᏂᎬᎢ, ᎠᎴ invaded ᎾᎥᎢ ᏴᎩ [[tracheae]] ᏂᏛᎴᏅᏓ ᎯᎠ ᎪᏯᏛ ᎠᎴᏅᏗdᏒ Ꮎ ᎤᏂᎪᏗᏗ ᎯᎠ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎯᎠ ᎪᏯᏛ ᎠᏓᎵᎦᎵᏍᏗᏍᎩ, ᎠᎴ ᎠᎴᏅᏗ ᎢᎦᏪᏍᏗ ᎠᏍᏓᏩᏛᏍᏗ markers ᎭᏫᎾᏗᏢ ᏧᎾᏟᎶᏍᏙᏗ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᎯᎸᏍᎩ ᎠᏎᎸᎯ ᎯᎠ ᎪᏯᏛ.  
 
-ᎾᎥᏂᎨ pupation, ᎯᎠ ᎪᏯᏛ ᎠᎴ ᎤᏩᏌᏙᏴ ᏙᏯᏗᏢ ᎯᎠ ᎠᏰᎵ ᎭᏫᎾᏗᏢ ᎤᎳᏂᎬᎬ ᏂᏛᎴᏅᏓ ᎯᎠ [[hemolymph]], ᎠᎴ ᎾᏍᎩ ᎤᏁᎳᎩ ᎤᏅᏌ ᎠᎴ ᎠᎴᏅᏘᏍᎬ ᎾᎥᏂᎨᏍᏙᏗ ᏩᏂᎨ ᎠᎴ ᎤᏓᏂᎳᎯᎨ, ᎾᎥᎢ ᎯᎠ iyuwakodi ᎯᎠ ᎠᏲᎵ ᏧᎵ ᏍᏆᎵᏓ ᎠᏎᏊᎢ ᎯᎠ larval ᎠᏰᎵ ᎤᏅᏌ ᎤᎭ adhered ᎠᏍᏓᏯ ᎯᎠ outer ᎠᏰᎵ ᎯᎠ ᎠᏲᎵ (ᎭᏫᎾᏗᏢ obtect pupae).  ᎭᏫᏂᏗᏢ ᎢᏧᏟᎶᏛ, ᎯᎠ ᎪᏯᏛ ᎤᏙᏢᏒ ᎠᏰᎵ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᏍᏓᏯ ᎠᎴ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎤᎾᏖᎳᏛᎩ ᎯᎠ ᎠᏰᎸ Ꮎ pupae ᏰᎵᏇ ᎾᏍᏋ ᎤᏑᏰᏒ ᎦᎸᎳᏗᏢ ᎠᎴ ᎤᏱᏙᎸᎩ ᏄᏠᏯᏍᏛᎾ ᎤᏲᏨᎯ ᎯᎠ ᎪᏯᏛ.  
+ᎾᎥᏂᎨ pupation, ᎯᎠ ᎪᏯᏛ ᎠᎴ ᎤᏩᏌᏙᏴ ᏙᏯᏗᏢ ᎯᎠ ᎠᏰᎵ ᎭᏫᎾᏗᏢ ᎤᎳᏂᎬᎬ ᏂᏛᎴᏅᏓ ᎯᎠ [[hemolymph]], ᎠᎴ ᎾᏍᎩ ᎤᏁᎳᎩ ᎤᏅᏌ ᎠᎴ ᎠᎴᏅᏘᏍᎬ ᎾᎥᏂᎨᏍᏙᏗ ᏩᏂᎨ ᎠᎴ ᎤᏓᏂᎳᎯᎨ, ᎾᎥᎢ ᎯᎠ ᎢᏳᏩᎪᏗ ᎯᎠ ᎠᏲᎵ ᏧᎵ ᏍᏆᎵᏓ ᎠᏎᏊᎢ ᎯᎠ larval ᎠᏰᎵ ᎤᏅᏌ ᎤᎭ adhered ᎠᏍᏓᏯ ᎯᎠ outer ᎠᏰᎵ ᎯᎠ ᎠᏲᎵ (ᎭᏫᎾᏗᏢ obtect pupae).  ᎭᏫᏂᏗᏢ ᎢᏧᏟᎶᏛ, ᎯᎠ ᎪᏯᏛ ᎤᏙᏢᏒ ᎠᏰᎵ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᏍᏓᏯ ᎠᎴ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎤᎾᏖᎳᏛᎩ ᎯᎠ ᎠᏰᎸ Ꮎ pupae ᏰᎵᏇ ᎾᏍᏋ ᎤᏑᏰᏒ ᎦᎸᎳᏗᏢ ᎠᎴ ᎤᏱᏙᎸᎩ ᏄᏠᏯᏍᏛᎾ ᎤᏲᏨᎯ ᎯᎠ ᎪᏯᏛ.  
 
 <gallery>
-Image:Pupation_-_Inachis_io.jpg|Pupation  ''[[Inachis io]]''
+File:Fifthinstarwingdisk.png|ᎣᏂ instar ᎪᏯᏛ ᏙᏯᏗᏢ, ''Junonia coenia'' 
+Image:Pupation_-_Inachis_io.jpg|Pupation ''[[Inachis io]]''
 Image:Chrysalis5504.jpg|ᎠᏲᎵ  [[Gulf Fritillary|ᏰᎵ ᎤᏝᏅᏛ Fritillary]]
-
-File:Butterfly.pdf
 </gallery>
 
 ===ᎠᏲᎵ===
@@ -132,33 +125,33 @@ File:Butterfly.pdf
 [[Image:Butterfly wing terms.svg|240px|thumb|right|ᏍᏚᎢᏍᏗ  ᏓᏓᎴᏂᏍᎬ ᎬᏔᏅᎯ]]
 
 ===ᎤᏔᎾ ᎧᎹᎹ ᎠᎴ Imago===
-ᎯᎠ ᎤᏔᎾ, sexually ᎤᏩᎾᏒ ᎤᏛᏒ, ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᎯᎠ ᏨᏍᎪᏱ ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ [[imago]]. ᏥᏄᏍᏗ Lepidoptera, butterflies ᎤᎭ ᏅᎩ ᎪᏯᏛ Ꮎ ᎠᎴ ᎫᏝᎢ ᎬᏙᏗ ᎤᏍᏗ ᏄᏓᎨᏒ (ᎠᎪᏩᏛᏗ ᏗᏟᎶᏍᏔᏅ), ᎠᎴ, ᏧᏓᎴᎿᎢ ᏩᏐᎳ, ᎯᎠ ᎠᎬᏱᏗᏢ- ᎠᎴ hindwings ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᎢᏧᎳ, ᎤᏁᎳᎩ ᎡᎵᏒᎢ ᎤᏟ ᎢᎦᎢ ᎠᏓᏙᎵᏍᏗ ᎤᎳᏫᏛᏓ. ᎧᎹᎹ ᎤᎭ ᏑᏓᎵ ᏗᏂᏅᏍᎨᏂ; ᎯᎠ ᎠᏲᎵ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᏑᏓᎵ ᎤᏙᎯᏳ ᏗᏂᏅᏍᎨᏂ ᎠᎴ ᏎᏍᏗ prolegs. ᎤᎶᏐᏅ ᎾᏍᎩ ᏗᏓᏲᎯᏍᏗ ᏂᏛᎴᏅᏓ Ꮝ pupal ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ, ᎾᏍᎩ ᏝᏰᎵ tvga ᎾᏍᎩᎾᎢ ᎢᎦᏛ ᎢᏳᏩᎪᏗ, ᎢᎬᏂᏏᏍᎩ Ꮝ ᎪᏯᏛ ᎤᎭ ᎾᏍᎩ ᏂᎨᏒᎾ ᎩᎳ unfolded. ᏧqᎠᎫᏔᏅᏒ-emerged ᎧᎹᎹ ᎤᏚᎸᏗ ᏄᎾᏛᏅ ᎤᏩᏍᎬ ᎢᎦᏛ ᎢᏳᏩᎪᏗ 'inflating' Ꮝ ᎪᏯᏛ ᎬᏙᏗ ᎩᎬ ᎠᎴ ᎠᎾᎵᏍᎪᎸᏘᏍᎬ ᎠᏂ ᎤᎧᏲᏗ, ᎾᎯᏳᎨᏒ ᎦᏙ ᎤᏍᏗ ᎢᏳᏩᎪᏗ ᎾᏍᎩ ᎨᏒᎢ ᏭᎶᏒᏍᏔᏅ ᎦᏂᏰᎩ [[predator]].
+ᎯᎠ ᎤᏔᎾ, sexually ᎤᏩᎾᏒ ᎤᏛᏒ, ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᎯᎠ ᏨᏍᎪᏱ ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ [[imago]]. ᏥᏄᏍᏗ Lepidoptera, ᎧᎹᎹ ᎤᎭ ᏅᎩ ᎪᏯᏛ Ꮎ ᎠᎴ ᎫᏝᎢ ᎬᏙᏗ ᎤᏍᏗ ᏄᏓᎨᏒ (ᎠᎪᏩᏛᏗ ᏗᏟᎶᏍᏔᏅ), ᎠᎴ, ᏧᏓᎴᎿᎢ ᏩᏐᎳ, ᎯᎠ ᎠᎬᏱᏗᏢ- ᎠᎴ hindwings ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᎢᏧᎳ, ᎤᏁᎳᎩ ᎡᎵᏒᎢ ᎤᏟ ᎢᎦᎢ ᎠᏓᏙᎵᏍᏗ ᎤᎳᏫᏛᏓ. ᎧᎹᎹ ᎤᎭ ᏑᏓᎵ ᏗᏂᏅᏍᎨᏂ; ᎯᎠ ᎠᏲᎵ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᏑᏓᎵ ᎤᏙᎯᏳ ᏗᏂᏅᏍᎨᏂ ᎠᎴ ᏎᏍᏗ prolegs. ᎤᎶᏐᏅ ᎾᏍᎩ ᏗᏓᏲᎯᏍᏗ ᏂᏛᎴᏅᏓ Ꮝ pupal ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ, ᎾᏍᎩ ᏝᏰᎵ tvga ᎾᏍᎩᎾᎢ ᎢᎦᏛ ᎢᏳᏩᎪᏗ, ᎢᎬᏂᏏᏍᎩ Ꮝ ᎪᏯᏛ ᎤᎭ ᎾᏍᎩ ᏂᎨᏒᎾ ᎩᎳ unfolded. ᏧqᎠᎫᏔᏅᏒ-emerged ᎧᎹᎹ ᎤᏚᎸᏗ ᏄᎾᏛᏅ ᎤᏩᏍᎬ ᎢᎦᏛ ᎢᏳᏩᎪᏗ 'inflating' Ꮝ ᎪᏯᏛ ᎬᏙᏗ ᎩᎬ ᎠᎴ ᎠᎾᎵᏍᎪᎸᏘᏍᎬ ᎠᏂ ᎤᎧᏲᏗ, ᎾᎯᏳᎨᏒ ᎦᏙ ᎤᏍᏗ ᎢᏳᏩᎪᏗ ᎾᏍᎩ ᎨᏒᎢ ᏭᎶᏒᏍᏔᏅ ᎦᏂᏰᎩ [[predator]].
 [[Image:Butterfly wing zones.svg|240px|thumb|right|ᏍᏚᎢᏍᏗ  ᎡᎶᎯ ᎠᏍᏓᏅᏅ   ᎧᎹᎹ ᎪᏯᏛ]]
 
 ==ᎤᎾᏙᏢᎯ==
-ᎤᎪᏗᏗ butterflies ᎬᏂᎨᏒ ᏂᎬᏅ ᎠᏯᏖᎾ ᎠᏍᏓᏅᏅ ᎤᎾᏙᏢᎯ - ᎤᏃᏴᎬ ᏂᏛᎴᏅᏓ ᎦᎸᎳᏗᎨᏍᏗ ᎬᎪᏩᏛᏗ morphological ᏧᏓᎴᎿᎢ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᏧᎾᏓᎴᏅᏓ ᏴᏫ, varieties, polymorph ᎠᎨᏴ ᏚᏙᏢᏒ, mimetic ᏚᏙᏢᏒ, sexual dimorphism, ᏙᏯᏗᏢ ᎢᏗᎦᏘᎭ ᏚᏙᏢᏒ ᏯᏛᎿ ᏥᏄᏍᏗ ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎠᏰᎸ ᎠᏑᏰᏗ ᏧᏓᎴᎲᏓ ᏅᏬᏘ ᎠᎴ ᎤᏍᏗ sexual ᎢᎦᏛᎭ. 
+ᎤᎪᏗᏗ ᎧᎹᎹ ᎬᏂᎨᏒ ᏂᎬᏅ ᎠᏯᏖᎾ ᎠᏍᏓᏅᏅ ᎤᎾᏙᏢᎯ - ᎤᏃᏴᎬ ᏂᏛᎴᏅᏓ ᎦᎸᎳᏗᎨᏍᏗ ᎬᎪᏩᏛᏗ morphological ᏧᏓᎴᎿᎢ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᏧᎾᏓᎴᏅᏓ ᏴᏫ, varieties, polymorph ᎠᎨᏴ ᏚᏙᏢᏒ, mimetic ᏚᏙᏢᏒ, sexual dimorphism, ᏙᏯᏗᏢ ᎢᏗᎦᏘᎭ ᏚᏙᏢᏒ ᏯᏛᎿ ᏥᏄᏍᏗ ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎠᏰᎸ ᎠᏑᏰᏗ ᏧᏓᎴᎲᏓ ᏅᏬᏘ ᎠᎴ ᎤᏍᏗ sexual ᎢᎦᏛᎭ. 
 
 ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎧᎹᎹ ᎠᎴ [[sexual dimorphism|sexually dimorphic]]. 
 
-[[Batesian mimicry]] ᎠᎴ [[Mullerian mimicry]] ᎭᏫᎾᏗᏢ butterflies ᎨᏒᎢ ᏧᏣᏔᏊ.
+[[Batesian mimicry]] ᎠᎴ [[Mullerian mimicry]] ᎭᏫᎾᏗᏢ ᎧᎹᎹ ᎨᏒᎢ ᏧᏣᏔᏊ.
 
-ᎠᏛᎯᏍᏙᏗ abnormalities ᏯᏛᎿ ᏥᏄᏍᏗ [[gynandromorph]]ᎾᏍᎩ ᎾᏍᏇ ᏄᎵᏍᏔᏅ ᏂᏛᎴᏅᏓ ᎢᏳᏩᎪᏗ ᎢᏳᏩᎪᏗ.
+ᎠᏛᎯᏍᏙᏗ abnormalities ᏯᏛᎿ ᏥᏄᏍᏗ [[gynandromorph]] ᎾᏍᎩ ᎾᏍᏇ ᏄᎵᏍᏔᏅ ᏂᏛᎴᏅᏓ ᎢᏳᏩᎪᏗ ᎢᏳᏩᎪᏗ.
 
 ==ᎢᏳᎾᏛᏁᎵᏓᏍᏗ==
-Butterflies ᎠᎴᏂᏓᏍᏗ ᎢᎬᏱᏗᏢ ᎾᎿ [[nectar|ᎣᎦᎾᎯᏎᏗ]] ᏂᏛᎴᏅᏓ ᎠᏂᏥᎸᏍᎩ. ᎢᎦᏛ ᎾᏍᎩ ᎾᏍᏇ ᏗᎫᎪᏔᏅ ᎠᎵᏍᏓᏴᏗ ᏂᏛᎴᏅᏓ [[pollen]], ᏡᎬ ᎠᏔᏍᎩᏍᎬ, ᎦᎳᏅᎯ ᎤᏓᏔᏅ ᎠᎩᏍᏗ, ᎦᎳᏅᎯ, ᎠᎴ dissolved ᎪᎢ ᎭᏫᎾᏗᏢ ᎦᏚᎵᏓ ᎾᏳ ᎠᎴ ᎦᏓ. Butterflies ᏗᏁᎶᏗ ᎤᎵᏍᎨᏛ ecological ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᏥᏄᏍᏗ [[pollinator]].
+ᎧᎹᎹ ᎠᎴᏂᏓᏍᏗ ᎢᎬᏱᏗᏢ ᎾᎿ [[nectar|ᎣᎦᎾᎯᏎᏗ]] ᏂᏛᎴᏅᏓ ᎠᏂᏥᎸᏍᎩ. ᎢᎦᏛ ᎾᏍᎩ ᎾᏍᏇ ᏗᎫᎪᏔᏅ ᎠᎵᏍᏓᏴᏗ ᏂᏛᎴᏅᏓ [[pollen]], ᏡᎬ ᎠᏔᏍᎩᏍᎬ, ᎦᎳᏅᎯ ᎤᏓᏔᏅ ᎠᎩᏍᏗ, ᎦᎳᏅᎯ, ᎠᎴ dissolved ᎪᎢ ᎭᏫᎾᏗᏢ ᎦᏚᎵᏓ ᎾᏳ ᎠᎴ ᎦᏓ. ᎧᎹᎹ ᏗᏁᎶᏗ ᎤᎵᏍᎨᏛ ecological ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᏥᏄᏍᏗ [[pollinator]].
 [[Image:antennae_ctb.png|thumb|240px|Antennae ᎤᏙᏢᏒᎢ ᎭᏫᎾᏗᏢ ᎯᎠ lepidoptera ᏂᏛᎴᏅᏓ C. T. Bingham (1905)]]
 
-ᏥᏄᏍᏗ ᎤᏔᎾ, butterflies ᎠᎴ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎤᏲᏨᎯ ᎦᎾ ᎾᏍᎩ ᎤᏩᏒ ᎾᎥᎢ ᎤᏅᏔᏂᏓᏍᏗ ᎤᎾᏤᎵ ᏂᎯ. ᎤᏅᏌ ᏂᎦᏛ ᎤᏠᏱᎭ ᎨᎳᏍᏙᏗ ᎾᎿ [[nectar|ᎣᎦᎾᎯᏎᏗ]] ᎠᎴ ᎠᏍᏓᏩᏛᏍᏗ ᎠᎹ ᏂᏛᎴᏅᏓ ᎦᏚᎵᏓ patches. ᎪᎯ ᎤᏅᏌ ᎿᏛᎦ ᎾᏍᎩᎾᎢ ᎠᎹ, ᎾᏍᎩᎾᎢ ᏄᎵᏂᎬᎬ ᏂᏛᎴᏅᏓ ᎧᎵᏎᏥ ᎭᏫᎾᏗᏢ ᎣᎦᎾᎯᏎᏗ ᎠᎴ ᎾᏍᎩᎾᎢ ᏙᎢ ᎠᎴ ᏐᎢ ᎪᎢ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᏭᎵᏍᎨᏗᏴᎢ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᏗᏟᎶᏍᏔᏅ. 
+ᏥᏄᏍᏗ ᎤᏔᎾ, ᎧᎹᎹ ᎠᎴ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎤᏲᏨᎯ ᎦᎾ ᎾᏍᎩ ᎤᏩᏒ ᎾᎥᎢ ᎤᏅᏔᏂᏓᏍᏗ ᎤᎾᏤᎵ ᏂᎯ. ᎤᏅᏌ ᏂᎦᏛ ᎤᏠᏱᎭ ᎨᎳᏍᏙᏗ ᎾᎿ [[nectar|ᎣᎦᎾᎯᏎᏗ]] ᎠᎴ ᎠᏍᏓᏩᏛᏍᏗ ᎠᎹ ᏂᏛᎴᏅᏓ ᎦᏚᎵᏓ patches. ᎪᎯ ᎤᏅᏌ ᎿᏛᎦ ᎾᏍᎩᎾᎢ ᎠᎹ, ᎾᏍᎩᎾᎢ ᏄᎵᏂᎬᎬ ᏂᏛᎴᏅᏓ ᎧᎵᏎᏥ ᎭᏫᎾᏗᏢ ᎣᎦᎾᎯᏎᏗ ᎠᎴ ᎾᏍᎩᎾᎢ ᏙᎢ ᎠᎴ ᏐᎢ ᎪᎢ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᏭᎵᏍᎨᏗᏴᎢ ᎾᏍᎩᎾᎢ ᎤᎾᏤᎵ ᏗᏟᎶᏍᏔᏅ. 
 
-ᎯᎸᏍᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ butterflies ᎤᏚᎳᏗ ᎤᏟ ᎢᎦᎢ [[sodium|ᏙᎢ]] ᎬᎾᏬᏍᎬ ᎠᏓᏁᎳᏅ ᎾᎥᎢ ᎯᎠ [[nectar (plant)|ᎣᎦᎾᎯᏎᏗ]] ᎤᏅᏌ ᎠᏗᏔᏍᏗ ᏂᏛᎴᏅᏓ ᎠᏂᏥᎸᏍᎩ.  ᏥᏄᏍᏗ ᏯᏛᎿ, ᎤᏅᏌ ᎠᎴ attracted ᎯᎠ ᏙᎢ ᎭᏫᎾᏗᏢ [[salt|ᎠᎹ]] (ᎦᏙ ᎤᏍᏗ ᎯᎠ ᎠᏍᎦᏯ ᎢᏳᏓᎵᎭ ᎠᏓᏁᏗ ᎯᎠ ᎠᎨᏴ ᎠᏍᏓᏩᏛᏍᏗ ᏥᏍᏚ).  ᏥᏄᏍᏗ ᏴᏫ ᎠᎵᎠᎷ ᎢᎦᎢ ᎨᏐ ᎦᏛᎬᎢ ᎤᎪᏗᏗ ᎠᎹ, ᎤᏅᏌ ᏱᏓᏟᎶᏍᏔᏅ ᎦᏙᎯ ᎾᎿ ᏴᏫ.
+ᎯᎸᏍᎩ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎧᎹᎹ ᎤᏚᎳᏗ ᎤᏟ ᎢᎦᎢ [[sodium|ᏙᎢ]] ᎬᎾᏬᏍᎬ ᎠᏓᏁᎳᏅ ᎾᎥᎢ ᎯᎠ [[nectar (plant)|ᎣᎦᎾᎯᏎᏗ]] ᎤᏅᏌ ᎠᏗᏔᏍᏗ ᏂᏛᎴᏅᏓ ᎠᏂᏥᎸᏍᎩ.  ᏥᏄᏍᏗ ᏯᏛᎿ, ᎤᏅᏌ ᎠᎴ attracted ᎯᎠ ᏙᎢ ᎭᏫᎾᏗᏢ [[salt|ᎠᎹ]] (ᎦᏙ ᎤᏍᏗ ᎯᎠ ᎠᏍᎦᏯ ᎢᏳᏓᎵᎭ ᎠᏓᏁᏗ ᎯᎠ ᎠᎨᏴ ᎠᏍᏓᏩᏛᏍᏗ ᏥᏍᏚ).  ᏥᏄᏍᏗ ᏴᏫ ᎠᎵᎠᎷ ᎢᎦᎢ ᎨᏐ ᎦᏛᎬᎢ ᎤᎪᏗᏗ ᎠᎹ, ᎤᏅᏌ ᏱᏓᏟᎶᏍᏔᏅ ᎦᏙᎯ ᎾᎿ ᏴᏫ.
 
-ᎾᏍᎩ ᏂᏗᎨᏒᎾ ᎦᏚᎵᏓ patches, ᎢᎦᏛ butterflies ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᏩᏛᎯᏓᏍᏗ ᎦᎳᏅᎯ, ᎦᎳᏅᎯ ᎤᏓᏔᏅ ᎠᎩᏍᏗ ᎠᎴ carcasses ᎣᏤᎵ ᎢᎬᏁᎯ ᎯᎠ ᎤᎵᏍᎨᏛ ᎪᎢ Ꮎ ᎤᏅᏌ ᎤᏚᎳᏗ.
+ᎾᏍᎩ ᏂᏗᎨᏒᎾ ᎦᏚᎵᏓ patches, ᎢᎦᏛ ᎧᎹᎹ ᎾᏍᎩ ᎾᏍᏇ ᎠᏓᏩᏛᎯᏓᏍᏗ ᎦᎳᏅᎯ, ᎦᎳᏅᎯ ᎤᏓᏔᏅ ᎠᎩᏍᏗ ᎠᎴ carcasses ᎣᏤᎵ ᎢᎬᏁᎯ ᎯᎠ ᎤᎵᏍᎨᏛ ᎪᎢ Ꮎ ᎤᏅᏌ ᎤᏚᎳᏗ.
 
-Butterflies ᎤᏓᏅᏖᏗ ᎯᎠ ᎤᏃᎴ ᎾᏍᎩᎾᎢ ᎦᏩᏒᎬ, ᎦᏃᎸᎥᏍᎬ ᎠᎴ ᎣᎦᎾᎯᏎᏗ ᎬᏗᏍᎬᎢ ᎤᎾᏤᎵ antennae. ᎯᎠ antennae ᎦᎷᏨ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᎦᎶᏄᎮᏛ ᎠᎴ colours. ᎯᎠ hesperids ᎤᎭ ᏭᏎᎸ ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᎠᎴ ᏑᏗ ᎯᎠ antennae. 
+ᎧᎹᎹ ᎤᏓᏅᏖᏗ ᎯᎠ ᎤᏃᎴ ᎾᏍᎩᎾᎢ ᎦᏩᏒᎬ, ᎦᏃᎸᎥᏍᎬ ᎠᎴ ᎣᎦᎾᎯᏎᏗ ᎬᏗᏍᎬᎢ ᎤᎾᏤᎵ antennae. ᎯᎠ antennae ᎦᎷᏨ ᎭᏫᎾᏗᏢ ᏧᏓᎴᏅᏓ ᎦᎶᏄᎮᏛ ᎠᎴ [[colors|ᏗᏑᏫᏍᏗ]]. ᎯᎠ hesperids ᎤᎭ ᏭᏎᎸ ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᎠᎴ ᏑᏗ ᎯᎠ antennae. 
 
-ᎢᎦᏛ butterflies, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ [[Monarch butterfly|ᏄᎬᏫᏳᏌᏕᎩ ᎧᎹᎹ]], ᎠᎴ [[migratory|ᎥᎢᏒᎢ]].
+ᎢᎦᏛ ᎧᎹᎹ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ [[Monarch butterfly|ᏄᎬᏫᏳᏌᏕᎩ ᎧᎹᎹ]], ᎠᎴ [[migratory|ᎥᎢᏒᎢ]].
 
-==[[Aerodynamics|ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ]], butterflies, ᎠᎴ ᏒᏃᏱ ᎡᎯ ᏅᏙ==
+==[[Aerodynamics|ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ]], ᎧᎹᎹ, ᎠᎴ ᏒᏃᏱ ᎡᎯ ᏅᏙ==
 ᏧᏓᎴᎿᎢ ᎤᎪᏗᏗ ᏐᎢ ᎠᏁᎳ ᎯᎠ [[insect|ᏨᏍᎪᏱ]] ᎡᎶᎯ, ᎯᎠ ᎤᎳᏫᏛᏓ ᎧᎹᎹ ᏰᎵᏇ ᎾᏍᏋ ᏗᎪᏏᏌᏅᎯ ᎢᎦᎢ (ᎠᎴ ᎾᎥᏂᎨᏍᏙᏗ ᎧᎵ ᏗᏙᎳᎩ) ᎬᏗᏍᎬᎢ ᎠᎵᏏᎾᎯᏍᏗ-ᎤᏔᏂᏗ ᎦᏙᎯ, ᎬᏙᏗ-ᎠᏓᏁᎳᏅᎯ [[aerodynamics|ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ]].  ᎯᎠ [[aspect ratio (wing)|ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᎾᎵᏐᏈᎸᏍᎬ]] ᎧᎹᎹ ᎤᏤᎵ ᎪᏯᏛ ᎨᏒᎢ ᎤᎵᎶᎯ ᎾᏍᏋ ᏄᏍᏛ ᎧᏃᎮᎸ ᎬᏗᏍᎬᎢ ᏌᎨᎢ [[airfoil]] ᎪᎷᏩᏛᏗ.  ᎯᎠ ᏒᏃᏱ ᎡᎯ ᏅᏙ ᎯᎠ ᎪᏯᏛ ᏄᏓᎴ ᏂᎨᏒᎾ ᏧᏂᎸᏫᏍᏓᏁᏗ ᎦᏌᏙᏯᏍᏗ ᎯᎠ [[Kutta condition|Kutta ᏄᏍᏗᏓᏅ]] ᎡᎳᏗ-ᎦᏣᏄᎳ [[aerodynamics|ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ]]. ᎾᏍᎩᎾᎢ ᎤᏟ ᎢᎦᎢ ᎤᏎᎸᎩ ᎢᎬᏁᏗ ᏄᏍᏛ ᏗᎧᏃᏗ, ᎠᎪᏩᏛᏗ [[Insect flight|ᏨᏍᎪᏱ ᎤᎳᏫᏛᏓ]].
 
 ==ᏗᎦᏟᏌᏅᎯ ᏗᏟᎶᏍᏔᏅ==
@@ -177,8 +170,8 @@ Image:Red Helen (Papilio helenus) at Samsing, Duars, WB W IMG 6219.jpg|''Papilio
 <gallery>
 Image:Rapsweissling Pieris napi .jpg|'''[[Green-veined White]]''', <br> ''Pieris napi''.
 Image:AnthocharisCardamines 2002Z.jpg|'''The Orange Tip''', <br>''[[Anthocharis cardamines]]''.
-Image:VV001 Delias eucharis Enhanced.JPG|'''Common Jezebel''',<br> ''[[Delias eucharis]]''.
-Image:Gonepteryx rhamni1.jpg|'''Common [[Brimstone]]''',<br> ''Gonepteryx rhamni''.
+Image:VV001 Delias eucharis Enhanced.JPG|ᏧᏣᏔᏉ Jezebel''',<br> ''[[Delias eucharis]]''.
+Image:Gonepteryx rhamni1.jpg|'''ᏧᏣᏔᏉ [[Brimstone]]''',<br> ''Gonepteryx rhamni''.
 </gallery>
 
 '''ᏏᏓᏁᎸᎯ [[Riodinidae]] - ᎯᎠ Metalmarks, Punches ᎠᎴ Judies'''
@@ -188,20 +181,20 @@ Image:RN008 Abisara neophron.jpg|'''Tailed Judy''',<br>''[[Abisara neophron]]''
 Image:Langesmetalmarkbutterfly91.jpg|'''Lange's Metalmark'''.
 </gallery>
 
-'''ᏏᏓᏁᎸᎯ [[Nymphalidae]] - ᎯᎠ ᎦᏄᎪᏅᏙᏗ-ᎦᏣᏄᎳ Butterflies'''
+'''ᏏᏓᏁᎸᎯ [[Nymphalidae]] - ᎯᎠ ᎦᏄᎪᏅᏙᏗ-ᎦᏣᏄᎳ ᎧᎹᎹ'''
 <gallery>
-Image:Xvisionxmonarch.jpg|[[Monarch Butterfly]],<br> '''The Monarch''',<br> ''Danaus plexippus'' <br>the most widely known<br> danaine butterfly.
-Image:Polyura_athamas.jpg|'''Common Nawab''',<br> ''[[Polyura athamas]]'',<br> a charaxine Nymphalid<br> from India.
+Image:Xvisionxmonarch.jpg|[[Monarch Butterfly|ᏄᎬᏫᏳᏌᏕᎩ ᎧᎹᎹ]], Ꮎ ᏄᎬᏫᏳᏌᏕᎩ, ''Danaus plexippus'' the most widely known danaine ᎧᎹᎹ.
+Image:Polyura_athamas.jpg|'''ᏧᏣᏔᏉ Nawab''',<br> ''[[Polyura athamas]]'',<br> a charaxine Nymphalid<br> [[India|ᎢᏅᏗᎾ]]-Ꭿ.
 Image:Butterfly_Morpho_rhetenor_helea_(M)_KL.jpg|''[[Morpho rhetenor helena]]'' a morphiine from<br> South America.
 Image:Julia-heliconian-butterfly.jpg|Julia Heliconian, <br>''[[Dryas julia]]''.
 Image:butterfly_panama.jpg|[[Sara Longwing]],<br> ''Heliconius sara''<br> a heliconine nymphalid.
-Image:Glasswing butterfly Panama.jpg|[[Glasswing butterfly]], <br>''Greta oto''.
+Image:Glasswing butterfly Panama.jpg|[[Glasswing butterfly|Glasswing ᎧᎹᎹ]], <br>''Greta oto''.
 Image:Buberel butterfly.jpg|[[Lorquin's Admiral]],<br> ''Limenitis lorquini''<br> a limenitidine nymphalid.
 Image:Cethosia_cyane.jpg|[[Cethosia cyane|Leopard Lacewing]], <br> ''Cethosia cyane'' of<br> subfamily ''Cyrestinae''.
-Image:Tagpfauenauge.jpg|[[Inachis io|Peacock Butterfly]], <br> ''Inachis io''.
-Image:Issoria lathonia.jpg{[[Queen of Spain Fritillary]], <br> ''Issoria lathonia''.
-Image:C-Falter Polygonia C-album.jpg|[[Comma Butterfly]], <br> ''Polygonia c-album''.
-Image:Commonbuckeye.JPG|[[Common Buckeye]],<br> ''Junonia coenia''.
+Image:Tagpfauenauge.jpg|[[Inachis io]], [[Peacock butteryfly|ᎬᎾ ᏔᎤᏆᏙᏟ ᎧᎹᎹ]], <br> ''Inachis io''.
+Image:Issoria lathonia.jpg|[[Queen of Spain Fritillary]], <br> ''Issoria lathonia''.
+Image:C-Falter Polygonia C-album.jpg|[[Comma ᎧᎹᎹ]], <br> ''Polygonia c-album''.
+Image:Commonbuckeye.JPG|[[ᏧᏣᏔᏉ Buckeye]],<br> ''Junonia coenia''.
 Image:Crimson_Patch_1.jpg|[[Crimson Patch]],<br> ''Chlosyne janais''.
 </gallery>
 
@@ -213,54 +206,49 @@ Image:Rathinda amor.jpg|'''Monkey Puzzle''',<br>''[[Rathinda amor]]''.
 Image:Banded Blue Pierrot.JPG|'''Banded Blue Pierrot''',<br>''[[Discolampa ethion]]''.
 </gallery>
 
-==ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ==
-*[[List of British butterflies|ᏙᎪᏩᎸ  ᎩᎵᏏ butterflies]]
-*[[List of U.S. state butterflies|ᏙᎪᏩᎸ  ᎠᏰᎵ ᎤᏒᎧᎵ ᎤᏔᏂᏗ ᎦᏙᎯ butterflies ᎾᏍᎩᎾᎢ ᎠᏂᏏᏴᏫᎭ ᎤᏔᏂᏗ ᎦᏙᎯ  ᎯᎠ Ꭴ...]]
-*[[List of butterflies of India|ᏙᎪᏩᎸ  butterflies  ᎠᎹ ᎦᏄᎪᎬ]]
-*[[Butterflies of Taiwan|Butterflies  Taiwan]]
+==ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ==
+*[[List of British butterflies| ᎩᎵᏏ ᎧᎹᎹ ᏙᎪᏩᎸ]]
+*[[List of U.S. state butterflies|ᏙᎪᏩᎸ  ᎠᏰᎵ ᎤᏒᎧᎵ ᎤᏔᏂᏗ ᎦᏙᎯ ᎧᎹᎹ ᎾᏍᎩᎾᎢ ᎠᏂᏏᏴᏫᎭ ᎤᏔᏂᏗ ᎦᏙᎯ  ᎯᎠ ᎠᎹᏰᏟ]]
+*[[List of butterflies of India|ᎢᏅᏗᎾ ᎧᎹᎹ ᏙᎪᏩᎸ]]
 *[[Butterfly Zoo|ᎧᎹᎹ ᏧᏓᎴᏅᏓ ᎠᏯᏛ]]
 
-==ᏫᏓᏎᎸᎢ==
-* {{aut|Bingham, C. T. }} 1905. [[Fauna of British India|gantlai  ᎩᎵᏏ ᎠᎹ ᎦᏄᎪᎬ]]. Butterflies. ᎦᏟᏌᏅ ᎪᏪᎵ 1.
-*{{aut|Boggs, C., Watt, W., Ehrlich, P.}} 2003. Butterflies: ᎠᏓᎴᏂᏍᎬ ᎠᎴ ᎤᎾᏙᏢᎯ ᎠᎩᏍᎬᎢ ᎤᎳᏫᏛᏓ. ᏗᏕᎶᏆᏍᏗ Chicago ᏗᏂᎴᏱᏗᏍᎩ, Chicago, USA.
-*{{aut|Heppner, J. B.}} 1998. ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ Lepidoptera. ''Holarctic Lepidoptera'', Suppl. 1.
-*{{aut|Pyle, R. M}}. 1992. ᎥᎢᏒᎢ ᎾᏍᎩᎾᎢ ᎧᎹᎹ Watchers. Houghton Mifflin.  ᎠᎴᏅᏔᏅ ᎦᎴᏴᏔᏅᎯ, 1984.  ISBN 0-395-61629-8
-*{{aut|Wahlberg, N., M. F. Braby, A. V. Z. Brower, R. de Jong, M.-M. Lee, S. Nylin, N. E. Pierce, F. A. H. Sperling, R. Vila, A. D. Warren & E. Zakharov.}} 2005. ᎠᎵᎪᏒ ᏄᎵᏍᏔᏅ combining morphological ᎠᎴ ᎠᏍᏓᏩᏛᏍᏗ ᎾᎯᏳ ᎢᎪᎯ ᎭᏫᎾᏗᏢ resolving ᎯᎠ ᎤᎾᏙᏢᎯ butterflies ᎠᎴ ᎠᏜ. ''ᎠᎯᎵᏒ ᎯᎠ ᎠᏥᎸᏉᏗ ᏴᏫ ᎤᎾᏙᏢᎯ, ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ B (Biological agatohvsdi)'' 272, 1577-1586.
+==ᏓᏓᏚᎬ ᎪᏪᎵ==
+{{reflist}}
 
-==ᏠᎨᏏ ᎠᏓᏎᎮᏗ butterflies==
+==ᏫᏓᏎᏄᎢ==
+* Bingham, C. T. (1905). [[Fauna of British India|ᎦᏂᏝᎢ ᎡᎵᏏ ᎢᏅᏗᎾ]]. ''ᎧᎹᎹ''. ᎦᏟᏌᏅ ᎪᏪᎵ 1.
+*Boggs, C., Watt, W., Ehrlich, P. (2003). ᎧᎹᎹ: ᎠᏓᎴᏂᏍᎬ ᎠᎴ ᎤᎾᏙᏢᎯ ᎠᎩᏍᎬᎢ ᎤᎳᏫᏛᏓ. ᏗᏕᎶᏆᏍᏗ Chicago ᏗᏂᎴᏱᏗᏍᎩ, Chicago.
+*Heppner, J. B. (1998). ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ Lepidoptera. ''Holarctic Lepidoptera'', Suppl. 1.
+*Pyle, R. M. (1992). ᎥᎢᏒᎢ ᎾᏍᎩᎾᎢ ᎧᎹᎹ Watchers. Houghton Mifflin.  ᎠᎴᏅᏔᏅ ᎦᎴᏴᏔᏅᎯ, 1984.  ISBN 0-395-61629-8
+*Wahlberg, N., M. F. Braby, A. V. Z. Brower, R. de Jong, M.-M. Lee, S. Nylin, N. E. Pierce, F. A. H. Sperling, R. Vila, A. D. Warren & E. Zakharov (2005). ᎠᎵᎪᏒ ᏄᎵᏍᏔᏅ combining morphological ᎠᎴ ᎠᏍᏓᏩᏛᏍᏗ ᎾᎯᏳ ᎢᎪᎯ ᎭᏫᎾᏗᏢ resolving ᎯᎠ ᎤᎾᏙᏢᎯ ᎧᎹᎹ ᎠᎴ ᎠᏜ. ''ᎠᎯᎵᏒ ᎯᎠ ᎠᏥᎸᏉᏗ ᏴᏫ ᎤᎾᏙᏢᎯ, ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ B (Biological agatohvsdi)'' 272, 1577-1586.
+
+==ᏠᎨᏏ ᎠᏓᏎᎮᏗ ᎧᎹᎹ==
 [[Image:Lepidoptera 001.jpg|thumb|right|250px|Lepidoptera]]
-* ''Butterflies ᎤᏴᏢ ᎠᎺᎵᎨ'', Jim P. Brock ᎠᎴ Kenn Kaufman ([[2003]])
-* ''Butterflies ᏗᎬᏩᎶᏒ ᏗᎦᏙᏗ: ᎯᎠ ᎧᎸᎬ'', Jeffrey Glassberg ([[1999]])
-* ''Butterflies ᏗᎬᏩᎶᏒ ᏗᎦᏙᏗ: ᎯᎠ ᏭᏕᎵᎬ'', Jeffrey Glassberg ([[2001]])
-* ''ᏠᎨᏏ ᎠᏓᏎᎮᏗ ᎧᎸᎬᎢᏗᏢ Butterflies'', Paul Opler ([[1994]])
-* ''ᏠᎨᏏ ᎠᏓᏎᎮᏗ ᏭᏕᎵᎬᏗᏢ Butterflies'', Paul Opler ([[1999]])
-* ''Peterson ᎢᎬᏱ ᎠᏓᏎᎮᏗ Butterflies ᎠᎴ ᏩᏐᎳ'', Paul Opler ([[1994]])
-* ''Las Mariposas ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Machu Picchu'' ᎾᎥᎢ Gerardo ᏄᎬᏫᏳᏌᏕᎩ ([[2003]])
-* ''ᎯᎠ ᎠᎴᏫᏍᏙᏗ ᎠᏓᏁᎳᏅᎯ Butterflies ᎭᏫᎾᏗᏢ Britain ᎠᎴ Ireland'' ᎾᎥᎢ Jim Asher (ᏗᎦᎴᏴᏗᏍᎩ), ᎠᏃᏪᎵᏍᎬ ᎦᎾᏄᎪᏫᏒ.  
-* ''ᎠᏜᏩᏛ ᎠᏓᏎᎮᏗ ᎯᎠ Butterflies ᎡᏆ Britain ᎠᎴ Ireland'' ᎾᎥᎢ Richard Lewington 
-* ''Butterflies Britain ᎠᎴ Europe'' (Collins Wildlife ᎰᏩ ᎠᏰᎸᏗ ᎠᏓᏎᎮᏗ) ᎾᎥᎢ Michael Chinery
-* ''Butterflies Europe'' ᎾᎥᎢ ᏗᏂᏤᎷᎯᏍᎩ Tolman ᎠᎴ Richard Lewington ([[2001]])
-* ''Butterflies Europe ᎢᏤ ᏠᎨᏏ ᎠᏓᏎᎮᏗ ᎠᎴ ᏍᏚᎢᏍᏗ'' ᎾᎥᎢ Tristan Lafranchis ([[2004]])
-* ''Butterflies Sikkim Himalaya ᎠᎴ ᎤᎾᏤᎵ ᏂᎬᏩᏍᏛ ᎧᏃᎮᏍᎩ'' ᎾᎥᎢ Meena Haribal (1994).
-* ''Butterflies Peninsular ᎠᎹ ᎦᏄᎪᎬ'' ᎾᎥᎢ Krushnamegh Kunte, Universities ᏗᏂᎴᏱᏗᏍᎩ (2005).
-* ''Butterflies ᎯᎠ ᎠᏴᏫᏯ ᎤᏔᏂᏗ ᎦᏙᎯ'' ᎾᎥᎢ Col M. . Wynter-Blyth, Bombay ᏂᎬᏩᏍᏛ ᎧᏃᎮᏍᎩ ᎤᎾᏙᏢᎯ, Mumbai, ᎠᎹ ᎦᏄᎪᎬ (1957).
-* ''ᎠᏓᏎᎮᏗ ᏧᏣᏔᏊ Butterflies Singapore'' ᎾᎥᎢ Steven ᎤᎾᏙᏢᎯ ᎯᏁᎩ Hian (Singapore agatohvsdi Centre)
-* ''Butterflies ᏭᏕᎵᎬ Malaysia ᎠᎴ Singapore'' ᎾᎥᎢ W..Fleming. (Longman Malaysia)
-* ''ᎯᎠ Butterflies ᎯᎠ Malay ᎦᏙᎯ'' ᎾᎥᎢ .. Corbet ᎠᎴ H. M. Pendlebury. (ᎯᎠ Malayan ᎤᏁᎳᏅ ᎤᏬᏢᏅ ᎤᎾᏙᏢᎯ)
+* ''ᎧᎹᎹ ᎤᏴᏢ ᎠᎺᎵᎨ'', Jim P. Brock ᎠᎴ Kenn Kaufman (2003)
+* ''ᎧᎹᎹ ᏗᎬᏩᎶᏒ ᏗᎦᏙᏗ: ᎯᎠ ᎧᎸᎬ'', Jeffrey Glassberg (1999)
+* ''ᎧᎹᎹ ᏗᎬᏩᎶᏒ ᏗᎦᏙᏗ: ᎯᎠ ᏭᏕᎵᎬ'', Jeffrey Glassberg (2001)
+* ''ᏠᎨᏏ ᎠᏓᏎᎮᏗ ᎧᎸᎬᎢᏗᏢ ᎧᎹᎹ'', Paul Opler (1994)
+* ''ᏠᎨᏏ ᎠᏓᏎᎮᏗ ᏭᏕᎵᎬᏗᏢ ᎧᎹᎹ'', Paul Opler (1999)
+* ''Peterson ᎢᎬᏱ ᎠᏓᏎᎮᏗ ᎧᎹᎹ ᎠᎴ ᏩᏐᎳ'', Paul Opler (1994)
+* ''Las Mariposas ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Machu Picchu'' ᎾᎥᎢ Gerardo ᏄᎬᏫᏳᏌᏕᎩ (2003)
+* ''ᎯᎠ ᎠᎴᏫᏍᏙᏗ ᎠᏓᏁᎳᏅᎯ ᎧᎹᎹ ᎭᏫᎾᏗᏢ [[ᎩᎵᏏᏲ]] ᎠᎴ Ireland'' ᎾᎥᎢ Jim Asher (ᏗᎦᎴᏴᏗᏍᎩ), ᎠᏃᏪᎵᏍᎬ ᎦᎾᏄᎪᏫᏒ.  
+* ''ᎠᏜᏩᏛ ᎠᏓᏎᎮᏗ ᎯᎠ ᎧᎹᎹ ᎡᏆ [[ᎩᎵᏏᏲ]] ᎠᎴ Ireland'' ᎾᎥᎢ Richard Lewington 
+* ''ᎧᎹᎹ [[ᎩᎵᏏᏲ]] ᎠᎴ [[Europe|ᏳᎳᏛ]]'' (Collins Wildlife ᎰᏩ ᎠᏰᎸᏗ ᎠᏓᏎᎮᏗ) ᎾᎥᎢ Michael Chinery
+* ''ᎧᎹᎹ [[Europe|ᏳᎳᏛ]]'' ᎾᎥᎢ ᏗᏂᏤᎷᎯᏍᎩ Tolman ᎠᎴ Richard Lewington (2001)
+* ''ᎧᎹᎹ ᏳᎳᏛ ᎢᏤ ᏠᎨᏏ ᎠᏓᏎᎮᏗ ᎠᎴ ᏍᏚᎢᏍᏗ'' ᎾᎥᎢ Tristan Lafranchis (2004)
+* ''ᎧᎹᎹ Sikkim Himalaya ᎠᎴ ᎤᎾᏤᎵ ᏂᎬᏩᏍᏛ ᎧᏃᎮᏍᎩ'' ᎾᎥᎢ Meena Haribal (1994).
+* ''ᎧᎹᎹ Peninsular ᎠᎹ ᎦᏄᎪᎬ'' ᎾᎥᎢ Krushnamegh Kunte, Universities ᏗᏂᎴᏱᏗᏍᎩ (2005).
+* ''ᎧᎹᎹ ᎯᎠ ᎠᏴᏫᏯ ᎤᏔᏂᏗ ᎦᏙᎯ'' ᎾᎥᎢ Col M. . Wynter-Blyth, Bombay ᏂᎬᏩᏍᏛ ᎧᏃᎮᏍᎩ ᎤᎾᏙᏢᎯ, Mumbai, ᎠᎹ ᎦᏄᎪᎬ (1957).
+* ''ᎠᏓᏎᎮᏗ ᏧᏣᏔᏊ ᎧᎹᎹ Singapore'' ᎾᎥᎢ Steven ᎤᎾᏙᏢᎯ ᎯᏁᎩ Hian (Singapore agatohvsdi Centre)
+* ''ᎧᎹᎹ ᏭᏕᎵᎬ Malaysia ᎠᎴ Singapore'' ᎾᎥᎢ W..Fleming. (Longman Malaysia)
+* ''ᎯᎠ ᎧᎹᎹ ᎯᎠ Malay ᎦᏙᎯ'' ᎾᎥᎢ .. Corbet ᎠᎴ H. M. Pendlebury. (ᎯᎠ Malayan ᎤᏁᎳᏅ ᎤᏬᏢᏅ ᎤᎾᏙᏢᎯ)
 * F. Nemos: ''Europas bekannteste Schmetterlinge. Beschreibung der wichtigsten Arten und Anleitung zur Kenntnis und zum Sammeln der Schmetterlinge und Raupen.'' Oestergaard Verlag, Berlin, ca. 1895, http://hdl.handle.net/10013/epic.28790.d001 (pdf, 77 MB).
 
-==ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ==
-===ᏂᎦᎥ ᎤᏁᏉᏨ===
+===ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ===
 {{commons|Butterfly|ᎧᎹᎹ}}
-
-===ᎤᏔᏂᏗ ᎦᏙᎯ ᏠᎨᏏ===
-
-===ᎾᏍᎩᏯᎢ repositories===
 <!-- Wikipedia is not a sales tool.  Only include images that are free for non-commercial use.  That license is not appropriate for the wiki, but does provide value to the readers. -->
-*[http://cirrusimage.com/butterfly_photos.htm Reference quality large format photographs, common butterflies of North America]
-*[http://bugguide.net/node/view/81 BugGuide.net Many images of North American butterflies, many licensed via Creative Commons]
-
-<!-- Place categories and templates below this line -->
+*[http://cirrusimage.com/butterfly_photos.htm Reference quality large format photographs, ᏧᏣᏔᏉ ᎧᎹᎹ ᏧᏴᏢ ᎠᎹᏰᎵ]
+*[http://bugguide.net/node/view/81 BugGuide.net Many images of ᏧᏴᏢ ᎠᎹᏰᎵ ᎧᎹᎹ, many licensed via Creative Commons]
 
 [[Category:ᏨᏍᎪᏱ]]
 
