--- a/ᎠᏫᏒᏅ.mw
+++ b/ᎠᏫᏒᏅ.mw
@@ -1,22 +1,22 @@
-[[File:Butchart gardens.JPG|thumb|250px|right| ᎾᏍᎩᏍᎩᏂ ᎤᏩᏒᎯ ᎡᏆ ᎠᏫᏒᏅ ᎭᏫᎾᏗᏢ [[Canada]].]]
+[[File:Butchart gardens.JPG|thumb|250px|right| ᎾᏍᎩᏍᎩᏂ ᎤᏩᏒᎯ ᎡᏆ ᎠᏫᏒᏅ ᎭᏫᎾᏗᏢ [[Canada|ᎨᎾᏓ]].]]
 [[File:Kuekenhoff 001.jpg|thumb|right|250px|[[Keukenhof]] ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎠᏫᏒᏅ ᎭᏫᎾᏗᏢ [[Lisse]], [[Netherlands]].]]
 [[File:garden.fountain.arp.750pix.jpg|thumb|right|250px|ᎢᎦᏛ   ᎠᏫᏒᏅ ᎭᏫᎾᏗᏢ [[Bristol]], [[England]].]]
 [[File:Garden.zoo-Bristol.jpg|thumb|right|250px| ᎠᏥᎸᏍᎩ ᎦᏂᏟ ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᏁᎸ  [[Bristol Zoo|Bristol ᏧᏓᎴᏅᏓ ᎠᏯᏛ]], England.]]
 [[File:Checkered garden in Tours, France.jpg|thumb|250px|right|ᏒᏃᏱ ᎡᎯ ᏅᏙ ᎠᏥᎸᏍᎩ ᎦᏂᏟ ᎭᏫᎾᏗᏢ [[Tours|ᎥᎢᏒᎢ]], [[France]].]]
 [[File:Lightmatter gardenflowers.jpg|thumb|250px| [[flower garden|ᎠᏥᎸᏍᎩ ᎠᏫᏒᏅ]].]]
 [[File:RyoanJi-Dry_garden.jpg|thumb|250px|Zen ᎠᏫᏒᏅ ᎾᎾᎢ [[Ryōan-ji]].]]
-[[File:Japan Tottori KannonIn DSC01907.jpg|thumb|250px|ᎯᎠ ᎠᏫᏒᏅ   [[Japan|ᎠᏰᎵese]] [[Buddhism|ᎦᎸᎳᏗ ᏦᏒ]] ᏧᏂᎳᏫᎢᏍᏗ.]]
-[[File:French Formal Garden in Loire Valley.JPG|thumb|250px|ᎠᎦᎸᏥ ᎢᎬᏱ ᎦᏰᎯ ᎠᏫᏒᏅ ᎭᏫᎾᏗᏢ ᎯᎠ [[Loire Valley|Loire ᎤᎨᏓᎵᏴ]].]]
-[[File:Bahai terraces one.jpg|thumb|250px|[[Terraces (Bahá'í)|Bahai ᎦᏁᎸ]] ᎭᏫᎾᏗᏢ [[Haifa]], [[Israel]].]]
-[[File:Parco di Castello 5.JPG|thumb|250px|ᎦᏁᎸ di Castello, ᏌᏊ  ᎯᎠ ᏬᏌᏂᏴ ᎠᎴ lyudetiyvda ᏱᏓᏟᎶᏍᏔᏅ  Italian ᎠᏫᏒᏅ, ᎭᏫᎾᏗᏢ [[Florence]], [[Italy]].]]
-[[File:Pt-ctb-jardimpaco.jpg|thumb|250px|[[Castelo Branco]], [[Portugal]].]]
+[[File:Japan Tottori KannonIn DSC01907.jpg|thumb|250px|ᎯᎠ ᎠᏫᏒᏅ [[Japanese|ᏣᏩᏂᏏ]] [[Buddhism|ᎦᎸᎳᏗ ᏦᏒ]] ᏧᏂᎳᏫᎢᏍᏗ.]]
+[[File:French Formal Garden in Loire Valley.jpg|thumb|250px|ᎠᎦᎸᏥ ᎢᎬᏱ ᎦᏰᎯ ᎠᏫᏒᏅ ᎭᏫᎾᏗᏢ ᎯᎠ [[Loire Valley|Loire ᎤᎨᏓᎵᏴ]].]]
+[[File:Bahai Gardens (17).JPG|thumb|250px|[[Terraces (Bahá'í)|Bahai ᎦᏁᎸ]] ᎭᏫᎾᏗᏢ [[Haifa]], [[Israel|ᎢᏍᏩᎵ]].]]
+[[File:Parco di Castello 5.JPG|thumb|250px|ᎦᏁᎸ di Castello, ᏌᏊ  ᎯᎠ ᏬᏌᏂᏴ ᎠᎴ ᎢᏳᏕᏘᏴᏓ ᏱᏓᏟᎶᏍᏔᏅ  Italian ᎠᏫᏒᏅ, ᎭᏫᎾᏗᏢ [[Florence]], [[Italy|ᏲᎶ]].]]
+[[File:Pt-ctb-jardimpaco.jpg|thumb|250px|[[Castelo Branco]], [[Portugal]]]]
 
-'''ᎠᏫᏒᏅ''' ᎨᏒᎢ ᎠᏟᎶᏍᏙᏗ ᎤᏜᏅᏛ, ᎤᏠᏱᎭ ᏙᏯᏗᏢ, ᎠᏫᏒᏗ ᎤᏤᎵᏛ ᎾᏍᎩᎾᎢ ᎯᎠ ᎬᏂᎨᏒ ᎢᎬᏁᏗ, ᏗᎦᎶᎪᏗ, ᎠᎴ ᎠᎵᎮᎵᏥᏓᏍᏗ [[plants|digakohidi]] ᎠᎴ ᏐᎢ ᏚᏙᏢᏒ [[nature|ᎤᏁᎳᏅ ᎤᏬᏢᏅ]]. ᎯᎠ ᎠᏫᏒᏅ ᏰᎵᏇ ᎠᏙᏢᏗ ᎢᏧᎳ ᏂᎬᏩᏍᏛ ᎠᎴ ᎠᏍᎦᏯ-ᎪᏢᏅᎯ ᏭᏚᎸᏛ ᏗᎬᏙᏗ. ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᎤᏙᏢᏒ ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[residential garden|residential ᎠᏫᏒᏅ]].  ᏭᏕᎵᎬᏗᏢ ᎦᏁᎸ ᎠᎴ ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᎾᏓᎴᎩ ᏚᎳᏏᏔᏅᎩ yvwatuwidv digakohidi. [[Zoo|ᏧᏓᎴᏅᏓ ᎠᏯᏛ]], ᎦᏙ ᎤᏍᏗ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎨᏯᏔᎯ ᎡᎿᎢ ᎡᎥ ᎭᏫᎾᏗᏢ ᎦᎶᏄᎮᏛ ᏂᎬᏩᏍᏛ ᏗᎦᎶᎪᏗ, ᎨᏒᎩ ᏧᏩᎦᏔᏅᏍ ᎤᏯᏅᎲ ''ᎦᏁᎸ''.  ᎢᎦᏛ ᎧᏃᎮᎸᎯ ᎢᏗᎦᎪᏘ ᎧᎸᎬᎢᏗᏢ ᎦᏁᎸ, ᏯᏛᎿ ᏥᏄᏍᏗ [[Japanese rock garden|Zen ᎦᏁᎸ]], ᎬᏙᏗ digakohidi ᎠᏂᎦᏲᎵ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᎾᎢ ᏂᎦᏛ. ᎠᎵᏍᏓᏴᏗ-ᎠᏛᎯᏍᏗᏍᎬ ᎦᏁᎸ ᎠᎴ ᎠᏥᎸᏉᏗ ᏂᏛᎴᏅᏓ [[farm|ᎦᎶᎨᏒ]]ᎾᎥᎢ ᎤᎾᏤᎵ ᎠᏂᎦᏲᎵ ᏗᎦᏛᏗ, ᎤᏟ ᎢᎦᎢ ᏗᎦᎸᏫᏍᏓᏁᏗ-intensive ᎢᏗᎬᎾᏗ, ᎠᎴ ᎤᎾᏤᎵ ᎤᏰᎸᏛᎢ (ᎠᎵᎮᎵᏥᏓᏍᏗ ᎦᎵᏓᏍᏛ ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ ᎠᏛᎯᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎦᎾᏗᏅᏗ). ᎯᎠ [[gardening|ᏗᎦᎶᎪᏗ]] ᎤᏓᏡᎬ discusses ᎯᎠ ᏧᎾᏓᎴᎿᎢ ᎠᎴ similarities ᎠᏰᎵ ᎦᏁᎸ ᎠᎴ ᏕᎦᎶᎨᏒ ᎭᏫᎾᏗᏢ ᎡᏆ ᎢᎨᏍᏙᏗ ᏄᏍᏗᏓᏅᎢ.
+'''ᎠᏫᏒᏅ''' ᎨᏒᎢ ᎠᏟᎶᏍᏙᏗ ᎤᏜᏅᏛ, ᎤᏠᏱᎭ ᏙᏯᏗᏢ, ᎠᏫᏒᏗ ᎤᏤᎵᏛ ᎾᏍᎩᎾᎢ ᎯᎠ ᎬᏂᎨᏒ ᎢᎬᏁᏗ, ᏗᎦᎶᎪᏗ, ᎠᎴ ᎠᎵᎮᎵᏥᏓᏍᏗ [[plants|ᏗᎦᎪᎯᏗ]] ᎠᎴ ᏐᎢ ᏚᏙᏢᏒ [[nature|ᎤᏁᎳᏅ ᎤᏬᏢᏅ]]. ᎯᎠ ᎠᏫᏒᏅ ᏰᎵᏇ ᎠᏙᏢᏗ ᎢᏧᎳ ᏂᎬᏩᏍᏛ ᎠᎴ ᎠᏍᎦᏯ-ᎪᏢᏅᎯ ᏭᏚᎸᏛ ᏗᎬᏙᏗ. ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᎤᏙᏢᏒ ᎨᏒᎢ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[residential garden|residential ᎠᏫᏒᏅ]].  ᏭᏕᎵᎬᏗᏢ ᎦᏁᎸ ᎠᎴ ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᎾᏓᎴᎩ ᏚᎳᏏᏔᏅᎩ ᏴᏩᏚᏫᏛ ᏗᎦᎪᎯᏗ. [[Zoo|ᏧᏓᎴᏅᏓ ᎠᏯᏛ]], ᎦᏙ ᎤᏍᏗ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎨᏯᏔᎯ ᎡᎿᎢ ᎡᎥ ᎭᏫᎾᏗᏢ ᎦᎶᏄᎮᏛ ᏂᎬᏩᏍᏛ ᏗᎦᎶᎪᏗ, ᎨᏒᎩ ᏧᏩᎦᏔᏅᏍ ᎤᏯᏅᎲ ''ᎦᏁᎸ''.  ᎢᎦᏛ ᎧᏃᎮᎸᎯ ᎢᏗᎦᎪᏘ ᎧᎸᎬᎢᏗᏢ ᎦᏁᎸ, ᏯᏛᎿ ᏥᏄᏍᏗ [[Japanese rock garden|ᏣᏩᏂᏏ ᏅᏯ ᎠᏫᏒᏅ ᎦᏁᎸ]], ᎬᏙᏗ ᏗᎦᎪᎯᏗ ᎠᏂᎦᏲᎵ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᎾᎢ ᏂᎦᏛ. ᎠᎵᏍᏓᏴᏗ-ᎠᏛᎯᏍᏗᏍᎬ ᎦᏁᎸ ᎠᎴ ᎠᏥᎸᏉᏗ ᏂᏛᎴᏅᏓ [[farm|ᎦᎶᎨᏒ]] ᎾᎥᎢ ᎤᎾᏤᎵ ᎠᏂᎦᏲᎵ ᏗᎦᏛᏗ, ᎤᏟ ᎢᎦᎢ ᏗᎦᎸᏫᏍᏓᏁᏗ-intensive ᎢᏗᎬᎾᏗ, ᎠᎴ ᎤᎾᏤᎵ ᎤᏰᎸᏛᎢ (ᎠᎵᎮᎵᏥᏓᏍᏗ ᎦᎵᏓᏍᏛ ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ ᎠᏛᎯᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎦᎾᏗᏅᏗ). ᎯᎠ [[gardening|ᏗᎦᎶᎪᏗ]] ᎤᏓᏡᎬ discusses ᎯᎠ ᏧᎾᏓᎴᎿᎢ ᎠᎴ similarities ᎠᏰᎵ ᎦᏁᎸ ᎠᎴ ᏕᎦᎶᎨᏒ ᎭᏫᎾᏗᏢ ᎡᏆ ᎢᎨᏍᏙᏗ ᏄᏍᏗᏓᏅᎢ.
 
-'''[[Gardening|ᏗᎦᎶᎪᏗ]]''' ᎨᏒᎢ ᎯᎠ ᎠᎵᏂᎬᏁᏗᎢ ᎠᏛᏏᏒ ᎠᎴ ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎯᎠ ᎠᏫᏒᏅ. ᎪᎯ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎨᏒᎢ ᎠᏍᏆᏛᎯ ᎾᎥᎢ ᎠᎴᏂᏍᎩ ᎠᎴ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ [[gardener|ᏗᎦᎶᎪᏗ]]. ᏗᎦᎶᎪᏗ ᏄᎵᏂᎬᎬ ᎾᏍᎩ ᎾᏍᏇ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎭᏫᎾᏗᏢ ᎬᏙᏗ-ᎠᏫᏒᏅ ᏗᏫᏍᏗ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎠᏣᏪᏐᎸᏍᏙᏗ, roadside ᎦᏁᎸ, ᎠᎴ ᏐᎢ [[public space|ᏴᏫ ᎤᏁᏓᏍᏗ ᎤᏜᏅᏛ]]. [[Landscape architecture|ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎠᏓᏁᎳᏅᎯ]] ᎨᏒᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎠᎵᏂᎬᏁᏗᎢ ᎬᏙᏗ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎪᏪᎵ Ꭺgoweli gowlisgi ᏫᏚᏳᎪᏛ specialise ᎭᏫᎾᏗᏢ ᎠᏤᎸ ᎢᎬᏁᏗ ᎾᏍᎩᎾᎢ ᏴᏫ ᎤᏁᏓᏍᏗ ᎠᎴ ᏧᏠᎯᏍᏗ ᏣᎦᏘᏲᏎᎯ.
+'''[[Gardening|ᏗᎦᎶᎪᏗ]]''' ᎨᏒᎢ ᎯᎠ ᎠᎵᏂᎬᏁᏗᎢ ᎠᏛᏏᏒ ᎠᎴ ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎯᎠ ᎠᏫᏒᏅ. ᎪᎯ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎨᏒᎢ ᎠᏍᏆᏛᎯ ᎾᎥᎢ ᎠᎴᏂᏍᎩ ᎠᎴ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ [[gardener|ᏗᎦᎶᎪᏗ]]. ᏗᎦᎶᎪᏗ ᏄᎵᏂᎬᎬ ᎾᏍᎩ ᎾᏍᏇ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎭᏫᎾᏗᏢ ᎬᏙᏗ-ᎠᏫᏒᏅ ᏗᏫᏍᏗ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎠᏣᏪᏐᎸᏍᏙᏗ, roadside ᎦᏁᎸ, ᎠᎴ ᏐᎢ [[public space|ᏴᏫ ᎤᏁᏓᏍᏗ ᎤᏜᏅᏛ]]. [[Landscape architecture|ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎠᏓᏁᎳᏅᎯ]] ᎨᏒᎢ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎠᎵᏂᎬᏁᏗᎢ ᎬᏙᏗ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎪᏪᎵ ᎪᏪᎵᏍᏗ ᏫᏚᏳᎪᏛ specialize ᎭᏫᎾᏗᏢ ᎠᏤᎸ ᎢᎬᏁᏗ ᎾᏍᎩᎾᎢ ᏴᏫ ᎤᏁᏓᏍᏗ ᎠᎴ ᏧᏠᎯᏍᏗ ᏣᎦᏘᏲᏎᎯ.
 
 == ᎠᏫᏒᏅ ᎠᏛᏂᏍᏗᏍᎩ ᎠᎴ ᎠᏤᎸ ᎢᎬᏁᏗ ==
-'''ᎠᏫᏒᏅ ᎠᏛᏂᏍᏗᏍᎩ''' ᎠᎴ '''[[garden design|ᎠᏫᏒᏅ ᎠᏤᎸ ᎢᎬᏁᏗ]]''' ᎠᎾᏍᎬᏘ ᎾᏍᏋ undertaken ᎾᎥᎢ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ. [[landscape architect|ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎪᏪᎵ Ꭺgoweli gowlisgi]] ᎨᏒᎢ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎦᎪ ᏰᎵᏇ ᎠᏟᎶᏍᏙᏗ ᎠᎴ realise ᏙᏯᏗᏢ ᎤᏜᏅᏛ. [[garden designer|ᎠᏫᏒᏅ ᏗᏟᎶᏍᏔᏅᏍᎩ]] ᎨᏒᎢ ᎤᏠᏱᎭ ᎠᎨᏲᏅᎯ ᎠᏟᎶᏍᏙᏗ ᎠᎴ realise residential ᎦᏁᎸ. 
+'''ᎠᏫᏒᏅ ᎠᏛᏂᏍᏗᏍᎩ''' ᎠᎴ '''[[garden design|ᎠᏫᏒᏅ ᎠᏤᎸ ᎢᎬᏁᏗ]]''' ᎠᎾᏍᎬᏘ ᎾᏍᏋ undertaken ᎾᎥᎢ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ. [[landscape architect|ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᎪᏪᎵ ᎪᏪᎵᏍᏗ]] ᎨᏒᎢ ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎦᎪ ᏰᎵᏇ ᎠᏟᎶᏍᏙᏗ ᎠᎴ realize ᏙᏯᏗᏢ ᎤᏜᏅᏛ. [[garden designer|ᎠᏫᏒᏅ ᏗᏟᎶᏍᏔᏅᏍᎩ]] ᎨᏒᎢ ᎤᏠᏱᎭ ᎠᎨᏲᏅᎯ ᎠᏟᎶᏍᏙᏗ ᎠᎴ realize residential ᎦᏁᎸ. 
 ᎯᎠ planner ᎠᏎ ᎠᏓᏁᏗ ᏗᏓᏁᏤᏗ ᎤᎪᏗᏗ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ:
 * ᎤᏰᎸᏛᎢ
 * ᎬᏂᎨᏒ ᏄᏍᏛ ᏄᏍᏗᏓᏅ
@@ -38,7 +38,7 @@
 * ᎦᎪᏘ ᏭᏚᎸᏛ ᏗᎬᏙᏗ
 
 ᎠᏍᎦᏯ-ᎪᏢᏅᎯ ᎢᏧᏓᎴᎩ:
-* [[Terrace (gardening)|ᎦᏁᎸ]], patio, alenvdidsv
+* [[Terrace (gardening)|ᎦᏁᎸ]], patio, ᎠᎴᏅᏗᏍᎬ
 * ᎤᏍᏗ ᎦᏅᏅ
 * [[Lighting|ᎠᏨᏍᏛᏍᎬ]]
 * ᎤᏛᎯᏍᏔᏅᎩ ᎦᏂᏟ
@@ -52,14 +52,14 @@
 * ᏄᏍᏛ ᎢᏯᏛᏁᏗ ᎤᏁᎳᏅ ᎤᏬᏢᏅ
 ** [[Bird|ᏥᏍᏆ]]- ᎠᎴ [[insect|ᏨᏍᎪᏱ]]-ᎠᎦᎦᏎᏍᏗ
 ** ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ ᎾᎿ ᎯᎠ ᎦᏁᏟᏴᏍᎬ [[season|ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ]]
-* tohi adedi
+* ᏙᎯ ᎠᏕᏗ 
 ** ᏏᏓᏁᎸᎯ ᎢᎦ ᏗᎵᏍᏓᏴᏗ ᎾᎿ ᎯᎠ ᎦᏁᎸ
 ** ᏗᏂᏲᎵ ᏓᎾᏁᎶᎲᏍᎬ ᎭᏫᎾᏗᏢ ᎯᎠ ᏑᏟᎶᏛ
 ** ᏓᎪᎵᏰᏍᎬ ᎠᎴ ᎠᎵᏪᏐᎸᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏏᎳᏛ ᎠᎾᏏᏗ
 ** ᎢᎦᏘᎭ ᎢᎬᏁᏗ ᎯᎠ flowerbeds
 ** ᎠᎵᏂᎬᏁᏗᎢ ᎭᏫᎾᏗᏢ ᎯᎠ [[shed|ᏚᎦᏔᏬᎸ]]
-** ᎤᎦᎾᏭ ᎭᏫᎾᏗᏢ ᎤᎦᎾᏩ [[sun|ᏅᏙ ᎢᎦ ᎡᎯ]]ᎤᏥᏍᏓᎷᎩᏍᎩ
-** ᏗᏓᎩᏯᏍᏗ ᎤᎦᎾᏭ sunlight ᎠᎴ ᎤᎦᎾᏭ
+** ᎤᎦᎾᏭ ᎭᏫᎾᏗᏢ ᎤᎦᎾᏩ [[sun|ᏅᏙ ᎢᎦ ᎡᎯ]] ᎤᏥᏍᏓᎷᎩᏍᎩ
+** ᏗᏓᎩᏯᏍᏗ ᎤᎦᎾᏭ [[sunlight|ᎠᎦᎵᏍᎬᎢ]] ᎠᎴ ᎤᎦᎾᏭ
 * ᎠᏛᏏᏒ ᎤᎵᏍᎨᏓ ᎠᏛᎯᏍᏙᏗ
 ** ᎠᏂᏥᎸᏍᎩ ᎠᏰᎳᏍᏗ ᎠᎴ ᎠᏲᎯᏍᏗ ᎭᏫᎾᏗᏢ ᎾᏍᎩᎾᎢ ᎦᎵᏦᏗ ᎭᏫᎾᏗᏢ ᎤᏬᏚ
 ** ᎢᏤᎢ ᎦᎪᏘ ᎠᎴ ᎢᏴ ᎠᏂᏙᎾᎥ ᎾᏍᎩᎾᎢ ᎠᎾᏓᏍᏓᏴᎲᏍᎬ
@@ -67,7 +67,6 @@
 == ᎢᏗᎦᎪᏘ ᎦᏁᎸ ==
 ᎦᏁᎸ ᎠᎾᏍᎬᏘ ᏄᏍᏛ ᏗᎧᏃᏗ ᎾᏍᎩᎾ ᎦᎪᏘ ᎠᎴ ᎦᎪᏘ ᏗᎦᎪᏗ:
 * [[Cactus garden|ᎤᎵᏰᏍᏗ ᎠᏫᏒᏅ]]
-* [[Fernery]]
 * [[Flower garden|ᎠᏥᎸᏍᎩ ᎠᏫᏒᏅ]]
 * [[Herb garden|ᎦᎪᏘ ᎠᏫᏒᏅ]]
 * [[Lawn|ᎣᏂ]]
@@ -86,15 +85,13 @@
 * Geometric ᎠᏫᏒᏅ
 * ᎠᏓᎵᏍᎩᏱᏍᎩ ᎠᏫᏒᏅ
 * ᎠᏓᏃᎯᏎᎯ ᎠᏫᏒᏅ
-* [[Japanese garden|Japanese ᎠᏫᏒᏅ]]
+* [[Japanese garden|ᏅᏯ ᎠᏫᏒᏅ]]
 * Naturalistic ᎠᏫᏒᏅ
-* [[Pizza garden|Pizza ᎠᏫᏒᏅ]]
+* [[Pizza garden|ᎦᏚ ᎭᏫᏯ ᎠᎵᏍᏗᎵᏔᏅ ᎠᏫᏒᏅ]]
 * [[Tropical garden|ᎤᎦᎾᏭ ᎠᏫᏒᏅ]]
 * [[Water garden|ᎠᎹ ᎠᏫᏒᏅ]]
 * [[Wild garden|ᎨᏯᏔᎯ ᎠᏫᏒᏅ]]
 * [[Xeriscaping]]
-* [[Zen garden|Zen ᎠᏫᏒᏅ]]
-* [[Dutch garden|Dutch ᎠᏫᏒᏅ]]
 
 ᎦᏁᎸ ᎠᎾᏍᎬᏘ ᎤᏯᎾᏛᏁᏗ ᎭᏫᎾᏗᏢ ᎾᏍᎩᎾ ᏄᏍᏛᎢ:
 * [[Botanical garden|ᎠᏫᏒᏅ ᎠᏫᏒᏅ]]
@@ -129,26 +126,31 @@
 
 == ᏐᎢ ᎤᏠᏱ ᎤᏜᏅᏛ ==
 ᏐᎢ ᏙᏯᏗᏢ ᎤᏜᏅᏛ Ꮎ ᎠᎴ ᎤᏠᏱ ᎦᏁᎸ ᎠᏠᏯᏍᏛ:
-
 * [[landscape|ᎦᏙᎯ ᏄᏍᏗᏓᏅ]] ᎨᏒᎢ ᏙᏯᏗᏢ ᎤᏜᏅᏛ ᎡᏆᎯᎨᏍᏙᏗ ᏗᎦᏛᏗ, ᏂᎬᏩᏍᏛ ᎠᎴ ᎠᏎᎸ ᎢᏗᎬᏁᏗ, ᎤᏠᏱᎭ unenclosed ᎠᎴ ᎠᎦᏎᏍᏔᏅ ᏂᏛᎴᏅᏓ ᎾᎿ ᎢᏴᎢ.
 * [[park|ᎠᏣᏪᏐᎸᏍᏙᏗ]] ᎨᏒᎢ ᎠᏟᎶᏍᏙᏗ ᏙᏯᏗᏢ ᎤᏜᏅᏛ, ᎤᏠᏱᎭ ᎠᏠᏯᏍᏔᏅ ('imparked') ᎠᎴ ᎡᏆᎯᎨᏍᏙᏗ ᏂᎬᎢ. [[Public park|ᏴᏫ ᎤᏁᏓᏍᏗ ᎠᏣᏪᏐᎸᏍᏙᏗ]] ᎠᎴ ᎾᏍᎩᎾᎢ ᏴᏫ ᎤᏁᏓᏍᏗ ᎬᏙᏗ.
 * [[arboretum|ᎦᎪᏘ]] ᎨᏒᎢ ᎠᏟᎶᏍᏙᏗ ᏙᏯᏗᏢ ᎤᏜᏅᏛ, ᎤᏠᏱᎭ ᎡᏆ, ᎾᏍᎩᎾᎢ ᎯᎠ ᎬᏂᎨᏒ ᎢᎬᏁᏗ ᎠᎴ ᎠᎦᏎᏍᏙᏗ [[tree|ᏡᎬ]].
 * [[farm|ᎦᎶᎨᏒ]] ᎠᎴ [[orchard|ᏗᎦᎶᎪᏗ]] ᎨᏒᎢ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᏛᎯᏍᏙᏗ [[food|ᎠᎵᏍᏓᏴᏗ]] ᎦᎶᏗ.
-* [[botanical garden|ᎠᏫᏒᏅ ᎠᏫᏒᏅ]] ᎨᏒᎢ ᏗᎦᎪᏗ ᎠᏫᏒᏅ ᎭᏢᏃ digakohidi ᎠᎴ ᎤᏛᏒ ᎢᏧᎳ ᎾᏍᎩᎾᎢ ᎠᏏᎾᏍᏛ ᏂᏚᏰᎸᏛᎢ ᎠᎴ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎵᎮᎵᏥᏓᏍᏗ ᎠᎴ ᎥᎦᏔᎲᎢ ᎠᎾᏓᏩᏛᎯᏙᎯ.
+* [[botanical garden|ᎠᏫᏒᏅ ᎠᏫᏒᏅ]] ᎨᏒᎢ ᏗᎦᎪᏗ ᎠᏫᏒᏅ ᎭᏢᏃ ᏗᎦᎪᎯᏗ ᎠᎴ ᎤᏛᏒ ᎢᏧᎳ ᎾᏍᎩᎾᎢ ᎠᏏᎾᏍᏛ ᏂᏚᏰᎸᏛᎢ ᎠᎴ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎵᎮᎵᏥᏓᏍᏗ ᎠᎴ ᎥᎦᏔᎲᎢ ᎠᎾᏓᏩᏛᎯᏙᎯ.
 * ᎠᏫᏒᏅ, ᎠᎴ [[zoo|ᏧᏓᎴᏅᏓ ᎠᏯᏛ]] ᎾᏍᎩᎾᎢ ᏍᏆᎳᎢ, ᎨᏒᎢ ᎾᎿᎢ ᎭᏢᏃ ᎨᏯᏔᎯ ᎡᎿᎢ ᎡᎥ ᎠᎴ ᎠᎦᏎᏍᏔᏅ ᎾᏍᎩᎾᎢ ᎠᎴ ᎬᏂᎨᏒ ᎢᎬᏁᎸ ᎯᎠ ᏴᏫ ᎤᏁᏓᏍᏗ.
 
-== ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
-{{commons|Garden}}
+== ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ ==
+<div style="font-size:100%;-moz-column-count:2; column-count:2;">
 * [[Garden design|ᎠᏫᏒᏅ ᎠᏤᎸ ᎢᎬᏁᏗ]]
 * [[Garden designer|ᎠᏫᏒᏅ ᏗᏟᎶᏍᏔᏅᏍᎩ]]
-* [[Garden tourism|ᎠᏫᏒᏅ tourism]]
+* [[Common plant list|ᏗᎦᎪᏗ ᏚᎾᏙᎥ ᏙᎪᏪᎸ]]
 * [[List of botanical gardens|ᏙᎪᏩᎸ ᎠᏫᏒᏅ ᎦᏁᎸ]]
-* [[List of companion plants|ᏙᎪᏩᎸ ᎠᎾᎵᎪᎲᏍᎩ digakohidi]]
+* [[List of companion plants|ᏙᎪᏩᎸ ᎠᎾᎵᎪᎲᏍᎩ ᏗᎦᎪᎯᏗ]]
 * [[List of gardens|ᏙᎪᏩᎸ ᏴᏫ ᎤᏁᏓᏍᏗ ᎦᏁᎸ]]
 * [[History of gardens|ᎧᏃᎮᏍᎩ ᎦᏁᎸ]]
 * [[Paradise garden|ᎠᎵᎮᎵᏥᏓᏍᏗ ᎠᏫᏒᏅ]]
+</div>
+
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+{{commons|Garden}}
+::[http://www.garden.org/ [[National Garden Association| ᎬᎾᏕᎾ ᎠᏫᏒᏅ ᎤᎾᎵᎪᏒ]]]
 
 [[Category:ᎦᏙᎯ ᏄᏍᏗᏓᏅ]]
+[[Category:ᏗᎦᎪᎯᏗ]]
 
 [[ar:حديقة منزلية]]
 [[arc:ܓܢܬܐ]]
